just do it 2020_06_17

--- a/Python/파이썬_심화.md
+++ b/Python/파이썬_심화.md
@@ -3,7 +3,82 @@
 # 파이썬 심화 
 <br>
 
-## 클로저 
+# 변수 
+
+## 전역변수(global variable) 
+- 프로그램 전체에서 동작 
+
+<br>
+
+###  전역변수 예제 
+```py
+# 전역변수 예제 
+
+x = 100  
+def val():
+    print(x) # 전역변수 
+
+val()
+print(x)
+
+# Output
+# >>> 100
+# >>> 100
+
+```    
+
+
+## 지역변수(??? variable) 
+- 함수 내부에서 동작
+
+<br>
+
+###  지역변수 예제 
+
+
+```py
+# 지역변수 예제 
+
+x = 100  
+def val():
+    x = 10  # 지역변수 
+    print(x) 
+
+val()
+print(x)
+
+# Output
+# >>> 10
+# >>> 100
+
+```
+
+### 함수안에서 전역 변수의 값을 변경
+
+함수안에서 전역 변수의 값을 변경하려면 `global` 을 사용 
+
+```py
+# 지역변수 예제 
+
+x = 100  
+def val():
+    global x # 전역 변수로 선언 
+    x = 10   # 지역변수x -> 전역변수로 변경  
+    print(x) 
+
+val()
+print(x)
+
+# Output
+# >>> 100
+# >>> 100
+
+```
+
+---
+<br>
+
+# 클로저 
 
 - 일반 함수와는 다르게 자신의 영역 밖에서 호출된 함수의 변수 값과 레퍼런스를 복사하고 저장한뒤 값들을 엑세스 가능하게 해준다 
 - 클로저는 어떤 함수를 함수 자신이 가지고 있는 환경과 함께 저장한 레코드
