--- a/Python/파이썬_심화.md
+++ b/Python/파이썬_심화.md
@@ -80,9 +80,10 @@ print(x)
 
 # 클로저 
 
-- 일반 함수와는 다르게 자신의 영역 밖에서 호출된 함수의 변수 값과 레퍼런스를 복사하고 저장한뒤 값들을 엑세스 가능하게 해준다 
-- 클로저는 어떤 함수를 함수 자신이 가지고 있는 환경과 함께 저장한 레코드
-- 코드안에 정의 되지 않은 변수를 클로저가 만들어지는 당시의 값과 레퍼런스에 맵핑하여 주는 역할
+일반 함수와는 다르게 자신의 영역 밖에서 호출된 함수의 변수 값과 레퍼런스를 복사하고 저장한뒤 값들을 엑세스 가능하게 해주는 역활을 함 
+
+- 어떤 함수를 함수 자신이 가지고 있는 환경과 함께 저장한 레코드
+- 코드안에 정의 되지 않은 변수를 클로저가 만들어지는 당시의 값과 레퍼런스에 맵핑하여 주는 역할을 함 
 
 <br>
 
@@ -90,8 +91,6 @@ print(x)
 ---
 
 - 변수의 사용 범위 그리고 함수를 클로저 형태로 만드는 방법에 관해서 공부 진행 
-<br>
-
 - 함수안에 함수를 만들어서 지역변수 호출 
 <br>
 
@@ -131,9 +130,8 @@ Outer()
 
 ```
 <br>
-이중 함수 안의 지역변수를 이중함수 밖(Outer에서)에서 즉,        
-
-Inner의 지역변수 x를 외부에서 호출하려면 `nonlocal`을 사용하면 된다. 
+이중 함수 안의 지역변수를 이중함수 밖(Outer에서)에서      
+즉, Inner의 지역변수 x를 외부에서 호출하려면 `nonlocal`을 사용하면 됨 
 <br>
 
 
