just do it 2020_06_17

--- a/Python/파이썬_심화.md
+++ b/Python/파이썬_심화.md
@@ -28,7 +28,7 @@ print(x)
 ```    
 
 
-## 지역변수(??? variable) 
+## 지역변수(local variable)
 - 함수 내부에서 동작
 
 <br>
@@ -89,11 +89,11 @@ print(x)
 
 ## 클로저 사용하기 
 ---
-
-- 변수의 사용 범위 그리고 함수를 클로저 형태로 만드는 방법에 관해서 공부 진행 
-- 함수안에 함수를 만들어서 지역변수 호출 
 <br>
 
+- 함수안에 함수를 만들어서 지역변수 호출 
+
+<br>
 
 ```py
 
@@ -111,8 +111,10 @@ Func()                   # 2. 실행
 # >>>> Func의 test
 
 ```
+<br>
 
 파이썬에서는 함수에서 변수를 만들면 항상 현재 함수의 지역변수가 됨 
+
 <br>
 
 ```py
@@ -130,8 +132,11 @@ Outer()
 
 ```
 <br>
-이중 함수 안의 지역변수를 이중함수 밖(Outer에서)에서      
-즉, Inner의 지역변수 x를 외부에서 호출하려면 `nonlocal`을 사용하면 됨 
+
+이중 함수 안의 지역변수를 이중함수 밖(Outer에서)에서     
+
+즉, Inner의 지역변수 x를 외부에서 호출하려면 `nonlocal` 을 사용하면 됨
+
 <br>
 
 
