--- a/Python/2.심화_변수.md
+++ b/Python/2.심화_변수.md
@@ -5,6 +5,10 @@
 
 # 변수 
 
+뒤부분에 나올 클로저를 알기위해서는 반드시 개념을 숙지하고 지나가야하는 부분이다. 
+
+<br>
+
 ## 전역변수(global variable) 
 
 - 함수 밖에서 만들어진 변수 
@@ -12,7 +16,6 @@
 - 프로그램 전체에서 동작
 
 - 프로그램이 복잡해질수록 골치 아파지는 변수  
-
 
 
 
@@ -35,7 +38,7 @@ print(x)
 # >>> 100
 
 ```    
-
+<br>
 
 ## 지역변수(local variable)
 
@@ -90,7 +93,7 @@ print(x)
 <br>
 <br>
 
-## 다중 함수에서 `global` 사용 
+## 다중 함수 - `global` 사용 
 
 ```py
 ## global 사용 
@@ -124,7 +127,7 @@ Fst_Phase()
 <br>
 <br>
 
-## 상위 함수의 지역변수 호출 - nonlocal 사용 
+## 상위 함수의 지역변수 호출 - `nonlocal` 사용 
 
 
 파이썬에서는 함수에서 변수를 만들면 항상 현재 함수의 지역변수가 된다.
@@ -156,7 +159,7 @@ Outer()
 
 ```py
 
-# Inner 의 x를 출력하려면
+# Inner의 x를 출력하려면
 def Outer():
     x = 35          # 지역변수 x
     def Inner():
@@ -172,6 +175,53 @@ Outer()
 ```
 <br>
 
+`nonlocal`을 어디서, 왜 써야하는지 감이안와서 이해를 위해 조금 더 알아봤다.     
+
+<br>
+
+```py
+def Outer():
+    x = 10
+    def Inner():
+        x += 10
+        print('x:', x)
+    Inner()
+Outer()
+
+# Output
+# >>> UnboundLocalError: local variable 'a' referenced before assignment
+
+```
+<br>
+
+이 경우 `UnboundLocalError: local variable 'a' referenced before assignment` 라는 에러가 발생하는데,    
+이 에러는 해당 범위 내에서 변수를 할당을 할 때    
+ 할당되는 변수가 파이썬에 의해서 자동적으로 로컬 변수로 간주 되어서 발생한 에러이다.       
+그래서 변수에 용도에 맞도록 `nonlocal` 혹은 `global` 이름표를 달아 주어야한다.    
+
+아래 예제의 경우에 `nonlocal`을 사용한다. 
+
+<br>
+
+```py
+# nonlocal을 추가 
+def Outer():
+    x = 10
+    def Inner():
+        nonlocal x # 추가된 항목
+        x += 10
+        print('a:', x)
+    Inner()
+Outer()
+
+# Output
+# >>> a: 20
+```
 ---
 <br>
 
+## Reference <br>
+
+- 파이썬 코딩도장 &nbsp; : &nbsp;<https://dojang.io/> <br>
+- SchoolOfWeb &nbsp; : &nbsp;  <http://schoolofweb.net/> <br>
+- 끝나지 않는 프로그래밍 일기 &nbsp; : &nbsp; <https://blog.hexabrain.net/347>
