--- a/Python/3.심화_클로저.md
+++ b/Python/3.심화_클로저.md
@@ -64,7 +64,7 @@ Func()                   # 2. 실행
 ```py
 ## 클로저 형태의 함수 
 
-def closr():                # 1. 선언 
+def Closr():                # 1. 선언 
     i = 10
     j = 10
 
@@ -75,7 +75,7 @@ def closr():                # 1. 선언
                             # 함수를 리턴 할때는 함수 이름만 반환 -> ()는 사용하면 x 
 
 
-y = closr()                 # 2. 호출 
+y = Closr()                 # 2. 호출 
                             # y에 저장된 함수 => 클로저
 
 print(y(1),y(2),y(3),y(4),y(5))
@@ -110,29 +110,157 @@ print(dum)
 ```py
 # lambda 사용 
 
-def closr():                
+def Closr():                
     i = 10
     j = 10
 
     return lambda x: i * x + j  # 람다 표현식을 반환 
 
-y = closr() 
+y = Closr() 
 print(y(1),y(2),y(3),y(4),y(5))
 
 # Output
 # >>> [20, 30, 40, 50, 60]
 
 ```
+<br>
+
+## 클로저 심화 
+<br>
+
+```py
+
+def Func():
+    Code = 'Func의 test'
+
+    def FuncInFunc():
+        print(Code)
+        
+    FuncInFunc()
+
+MyFunc = Func()
+
+```
+<br>
+
+MyFunc에 함수가 들어있는지 확인 해보자 
 
 <br>
 
-## 클로저 응용 
+```py
+
+def Func():
+    Code = 'Func의 test'
+
+    def FuncInFunc():
+        print(Code)
+        
+    return FuncInFunc
+
+MyFunc = Func()
+print(MyFunc)
+
+# Output
+# >>> <function Func.<locals>.FuncInFunc at 0x0000021C2FDEEF78>
+
+```
+<br>
+
+FuncInFunc 함수가 할당된 것을 확인 -> MyFunc을 이용해서 FuncInFunc 호출 해보자 !! 
+
+**FuncInFunc = MyFunc** 
+<br>
+
+```py
+
+def Func():
+    Code = 'Func의 test'
+
+    def FuncInFunc():
+        print(Code)
+        
+    return FuncInFunc
+
+MyFunc = Func()
+print(MyFunc)
+
+# Output
+# >>> <function Func.<locals>.FuncInFunc at 0x0000021C2FDEEF78>
+
+```
+<br>
+
+이 함수의 상세 내부 구조에 대해서 확인해보자  
+
+<br>
+
+```py
+def Func():
+    Code = 'Func의 test'
+
+    def FuncInFunc():
+        print(Code)
+        
+    return FuncInFunc
+
+MyFunc = Func()
+
+d = [dir(MyFunc),
+    type(MyFunc.__closure__),
+    MyFunc.__closure__, 
+    MyFunc.__closure__[0],
+    dir(MyFunc.__closure__[0]),
+    MyFunc.__closure__[0].cell_contents
+    ]
+
+for i in d :
+    print(i)
+    print('='*50)
+
+```
+<br>
+
+### dir(MyFunc) => __closure\_\_ 라는 속성을 확인 
+
+```py
+>>> ['__annotations__', '__call__', '__class__', '__closure__', '__code__',   '__defaults__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__',    '__format__', '__ge__', '__get__', '__getattribute__', '__globals__', '__gt__',    '__hash__', '__init__', '__init_subclass__', '__kwdefaults__', '__le__',   '__lt__', '__module__', '__name__', '__ne__', '__new__', '__qualname__',  '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__',  '__str__', '__subclasshook__']
+```
+<br>
+
+### type(MyFunc.__closure\_\_) => __closure__의 타입 - 튜플
+
+```py
+>>> <class 'tuple'>
+```
+<br>
+
+### MyFunc.__closure\_\_ => 튜플안을 확인 - 1개의 객체 확인 
+
+```py
+>>> (<cell at 0x000001CA797BB6A8: str object at 0x000001CA797D77A0>,)
+```
+### MyFunc.__closure\_\_[0] => "cell" 문자열 객체
+```py
+>>> <cell at 0x000001CA797BB6A8: str object at 0x000001CA797D77A0>
+```
+### dir(MyFunc.__closure\_\_[0]) => cell의 속성 - cell_contents 확인 
+```py
+>>> ['__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'cell_contents']
+```
+### MyFunc.__closure\_\_[0].cell_contents => 확인 => Func의 test
+```py
+>>> Func의 test
+```
+
+<br>
+<br>
+
+## 클로저 응용 및 실습 
 
 앞에서 배운 변수들을 이용해서 클로저의 지역 변수를 변경해보자.
 
 ```py
-
-def closr():                
+def Closr():                
     i = 10
     j = 10
     tal = 0
@@ -143,7 +271,7 @@ def closr():
         print(tal)  
     return mul
 
-y = closr() 
+y = Closr() 
 
 print(y(1),y(2),y(3))
 
@@ -162,9 +290,99 @@ y(3)
 # >>> 50
 # >>> 90
 ```
+<br>
 
+### schoolofweb를 통해 알게 된 건데 이렇게도 활용이 가능하다. 
+---
+<br>
+
+#### h1태그와 p태그로 문자열을 감싸는 함수
+
+```py
+def Closr(tag):  
+    txt = '안녕하세요'  
+    tag = tag  
+
+    def Func():  
+        print(f'<{tag}>{txt}<{tag}>')
+
+    return Func  
+
+h1Func = Closr('h1')  
+pFunc  = Closr('p')  
+
+h1Func() 
+pFunc()  
+
+# Output
+# >>> <h1>안녕하세요<h1>
+# >>> <p>안녕하세요<p>
+```
+<br>
+
+#### 태그안의 문자열을 컨트롤
+
+```py 
+
+def Closr(tag):  
+    tag = tag  
+
+    def Func(input):  
+        txt = input  
+        print(f'<{tag}>{txt}<{tag}>')
+
+    return Func  
+
+h1Func = Closr('h1')  
+pFunc  = Closr('p')  
+
+h1Func('여긴 h1태그의 내부')  
+pFunc('여긴 p태그의 내부')  
+
+# Output
+# >>> <h1>여긴 h1태그의 내부<h1>
+# >>> <p>여긴 p태그의 내부<p>
+```
+<br>
+
+#### 1~10까지 출력 하는 연습문제 
+
+```py
+# MyFunc
+def cnt():
+    i = 0 
+    def count(x):
+        nonlocal i
+        i = i + 1
+        print(i)
+    return count
+
+c = cnt()
+for i in range(10):
+    c(i)
+
+print('='*50)
+
+# 정답 
+
+def cnt_an():
+    i = 0 
+    def count_an(x):
+        nonlocal i
+        i += 1
+        return i 
+    return count_an
+
+my_fnc = cnt_an()
+for k in range(10):
+    print(my_fnc(k), end= ' ')
+
+```
 
 <br>
+
+---
+
 <br>
 
 ## Reference <br>
