JUST DO IT_2020.06.18

--- a/Python/1.심화_재귀호출.md
+++ b/Python/1.심화_재귀호출.md
@@ -1,24 +1,117 @@
-
-#### 1. 파이썬 심화 - 재귀 호출
 <br>
 
-# 재귀 호출
+#### 1. 파이썬 심화 - 재귀 호출(recursive call)
+<br>
 
-함수 안에서 함수 자기자신을 호출하는 방식을 재귀 호출(recursive call)
+# 재귀호출(recursive call)
 
+- 함수 안에서 함수 자기자신을 호출하는 방식
 
+- 일반적인 상황에서 잘 사용하지 않음
+- 알고리즘을 만들때 유용 
+    - 보통 알고리즘은 반복문으로 구현한 코드보다 재귀호출로 구현한 코드가 좀 더 직관적이고 이해하기 쉬운 경우가 많음 
 
-
-
-
-
-
-
-
-
+- 코드는 간단하지만 머리속으로 많은 생각을 요함 
 
 
 
+
+ 
+<br>
+<br>
+
+
+## 재귀호출 사용하기 
+
+<br>
+
+아래처럼 구현하게 되면 무한루프에 빠지듯이 계속 함수를 호출한다. 
+
+<br>
+
+```py
+
+def Func():
+    print('Hello, world!')
+    Func()
+ 
+Func()
+
+```
+<br>
+
+이렇게 반복된다.
+
+<br>
+
+```bash
+# OutPut
+# >>> Hello, world!
+# >>> Hello, world!
+# >>> Hello, world!
+# >>>  ... 에러날때까지 반복 
+
+#      => 파이썬은 최대 재귀 깊이(maximum recursion depth) -> 1,000으로 정해져 있음
+#      => 최대 재귀 깊이를 초과하면 RecursionError가 발생 
+
+Func
+  ㄴFunc
+    ㄴFunc
+       ㄴFunc
+          ㄴFunc
+             ㄴ 반복...
+```
+
+<br>
+
+
+## 재귀호출 - 종료 조건 
+
+<br>
+
+
+```py
+
+def Func(cnt):
+    if cnt == 0:    # 종료 조건을 만족하는 cnt==0이되면 함수를 호출하지 않음 
+                    # cnt가 0이 아니면 다시 Func 함수를 호출
+        return
+    
+    print('Hello, world!', cnt)
+    
+    cnt -= 1        # cnt를 1 감소시킨 뒤
+    Func(cnt)       # 다시 Func에 넣음
+ 
+Func(5)             # Func 함수 호출
+
+```
+
+<br>
+
+
+## 재귀호출 - 팩토리얼
+
+실습겸 팩토리얼을 재귀호출을 이용해서 만들어 보겠다.
+
+팩토리얼은 1부터 n까지 양의 정수를 차례대로 곱한 값 => `!`로 표기 
+
+<br>
+
+```py
+
+def factorial(n):
+    if n == 1:      
+        return 1                    # 1을 반환하고 재귀호출을 종료
+    return n * factorial(n - 1)     # n과 factorial 함수에 n - 1을 넣어서
+                                    # 반환된 값을 곱함
+ 
+print(factorial(5))
+# Output
+# >>> 120 
+
+```
+
+<br>
 
 
 
