--- a/Python/3.심화_클로저.md
+++ b/Python/3.심화_클로저.md
@@ -3,7 +3,6 @@
 #### 3. 파이썬 심화 - 클로저(Closure)
 
 
-내용이 어려워서 정리 필요 
 
 <br>
 
@@ -43,8 +42,8 @@ Func()                   # 2. 실행
 
 <br>
 
-- 함수 내부에서 정의된 함수는 클로저 될 수 있다.
-- 클로저는 바깥 함수로부터 생성된 변수값을 변경 또는 저장할 수 있는 함수
+- 함수 내부에서 정의된 함수는 클로저
+- 바깥 함수로부터 생성된 변수값을 변경 또는 저장할 수 있는 함수
 
 <br>
 <br>
@@ -54,10 +53,10 @@ Func()                   # 2. 실행
 <br>
 함수 바깥쪽에 있는 지역변수를 사용해서 연산을 진행     
 
-글로저를 사용하면 프로그램의 흐름을 변수에 저장가능     
+글로저를 사용하면 프로그램의 흐름을 변수에 **저장가능**     
 클로저 = 지역변수 + 코드 묶어서 사용
 
-클로저에 속한 지역변수는 바깥에서 직접 접근 할 수 없으므로 데이터를 숨기고 싶을때 사용    
+클로저에 속한 지역변수는 바깥에서 **직접** 접근 할 수 없으므로 데이터를 숨기고 싶을때 사용    
 
 <br>
 
@@ -223,34 +222,64 @@ for i in d :
 ### dir(MyFunc) => __closure\_\_ 라는 속성을 확인 
 
 ```py
->>> ['__annotations__', '__call__', '__class__', '__closure__', '__code__',   '__defaults__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__',    '__format__', '__ge__', '__get__', '__getattribute__', '__globals__', '__gt__',    '__hash__', '__init__', '__init_subclass__', '__kwdefaults__', '__le__',   '__lt__', '__module__', '__name__', '__ne__', '__new__', '__qualname__',  '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__',  '__str__', '__subclasshook__']
+
+>>> ['__annotations__', '__call__', '__class__', '__closure__', '__code__', 
+'__defaults__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__',  
+'__format__', '__ge__', '__get__', '__getattribute__', '__globals__', 
+'__gt__',    '__hash__', '__init__', '__init_subclass__', '__kwdefaults__',
+'__le__',   '__lt__', '__module__', '__name__', '__ne__', '__new__',
+'__qualname__',  '__reduce__', '__reduce_ex__', '__repr__', '__setattr__',
+'__sizeof__',  '__str__', '__subclasshook__']
+
 ```
 <br>
 
 ### type(MyFunc.__closure\_\_) => __closure__의 타입 - 튜플
 
 ```py
+
 >>> <class 'tuple'>
+
 ```
 <br>
 
 ### MyFunc.__closure\_\_ => 튜플안을 확인 - 1개의 객체 확인 
 
 ```py
+
 >>> (<cell at 0x000001CA797BB6A8: str object at 0x000001CA797D77A0>,)
+
 ```
+<br>
+
 ### MyFunc.__closure\_\_[0] => "cell" 문자열 객체
 ```py
+
 >>> <cell at 0x000001CA797BB6A8: str object at 0x000001CA797D77A0>
+
 ```
+<br>
+
 ### dir(MyFunc.__closure\_\_[0]) => cell의 속성 - cell_contents 확인 
 ```py
->>> ['__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'cell_contents']
+
+>>> ['__class__', '__delattr__', '__dir__', '__doc__', '__eq__',
+'__format__', '__ge__', '__getattribute__', '__gt__', '__hash__',
+'__init__', '__init_subclass__', '__le__', '__lt__', '__ne__',
+'__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__',
+'__sizeof__', '__str__', '__subclasshook__', 'cell_contents']
+
 ```
+<br>
+
 ### MyFunc.__closure\_\_[0].cell_contents => 확인 => Func의 test
 ```py
+
 >>> Func의 test
+
 ```
+
+언제나 느꼈지만 ... 함수의 내부구조는 복잡하구나를 또 다시 느끼고 ....
 
 <br>
 <br>
