JUST DO IT_2020.06.18

--- a/Python/3.심화_클로저.md
+++ b/Python/3.심화_클로저.md
@@ -100,7 +100,7 @@ print(dum)
 - 람다
     - 이름 없는 익명함수
 - 클로저
-    - 함수를 툴러싼 환경을 유지하고 니후에 다시 사용하는 함수
+    - 함수를 둘러싼 환경을 유지하고 이후에 다시 사용하는 함수
 
 두 함수는 다르다. 그렇기 때문에 혼동하지 말자.  
 
