--- a/Python/1.심화_재귀호출.md
+++ b/Python/1.심화_재귀호출.md
@@ -1,20 +1,24 @@
 <br>
 
-#### 1. 파이썬 심화 - 재귀 호출(recursive call)
+#### 1. 파이썬 심화 - 재귀호출(recursive call)
 <br>
 
 # 재귀호출(recursive call)
 
-- 함수 안에서 함수 자기자신을 호출하는 방식
+재귀호출 혹은 재귀함수(recursive call)라고 불린다. 
 
-- 일반적인 상황에서 잘 사용하지 않음
-- 알고리즘을 만들때 유용 
-    - 보통 알고리즘은 반복문으로 구현한 코드보다 재귀호출로 구현한 코드가 좀 더 직관적이고 이해하기 쉬운 경우가 많음 
+- 함수 안에서 함수 자기자신을 호출하는 방식이다. 
+- 다양한 수학문제를 해결하는데 매우유용하고 자주 쓰인다. 
+    - 팩토리얼
+    - 피보나치 수열
+    - 등등 
 
-- 코드는 간단하지만 머리속으로 많은 생각을 요함 
+- 일반적인 상황에서 잘 사용하지 않는다.
+- 알고리즘을 만들때 유용하다.
+    - 보통 알고리즘은 반복문으로 구현한 코드보다      
+    재귀호출로 구현한 코드가 좀 더 직관적이고 이해하기 쉬운 경우가 많다.
 
-
-
+- 코드는 간단하지만 머리속으로 많은 생각을 요한다. 
 
  
 <br>
@@ -25,7 +29,7 @@
 
 <br>
 
-아래처럼 구현하게 되면 무한루프에 빠지듯이 계속 함수를 호출한다. 
+아래처럼 구현하게 되면 무한루프에 빠지듯이 끊임없이 계속 함수를 호출한다. 
 
 <br>
 
@@ -33,14 +37,15 @@
 
 def Func():
     print('Hello, world!')
-    Func()
+    Func() # 재귀호출
  
-Func()
+Func()     # 호출
 
 ```
 <br>
 
-이렇게 반복된다.
+이렇게 반복된다.       
+이런 경우 `Ctrl+C`를 통해 `KeyboardInterrupt`를 발생시켜서 함수를 빠져 나올 수 있다. 
 
 <br>
 
@@ -52,7 +57,8 @@ Func()
 # >>>  ... 에러날때까지 반복 
 
 #      => 파이썬은 최대 재귀 깊이(maximum recursion depth) -> 1,000으로 정해져 있음
-#      => 최대 재귀 깊이를 초과하면 RecursionError가 발생 
+#      => 최대 재귀 깊이를 초과하면 RecursionError가 발생 -> 스택 오버플로를 발생을 제어하기 위함 
+
 
 Func
   ㄴFunc
@@ -68,7 +74,7 @@ Func
 ## 재귀호출 - 종료 조건 
 
 <br>
-
+재귀 호출을 빠져 나오기 위해서는 while문에서 사용한것처럼 if문을 이용해서 빠져 나올 수 있다.
 
 ```py
 
@@ -101,15 +107,70 @@ Func(5)             # Func 함수 호출
 
 def factorial(n):
     if n == 1:      
-        return 1                    # 1을 반환하고 재귀호출을 종료
+        return 1                    # 1을 리턴하고 재귀호출을 종료
     return n * factorial(n - 1)     # n과 factorial 함수에 n - 1을 넣어서
-                                    # 반환된 값을 곱함
+                                    # 리턴된 값을 곱함 -> 이게 핵심 
  
 print(factorial(5))
 # Output
 # >>> 120 
+```
+
+계산값이 즉시 구해지는 것이 아니라 재귀호출로 `n-1`을 계속 전달하다가 `n == 1` 때 `1`을 리턴하면서 n과 곱하고 다시 결과값을 리턴하는 구조가 반복된다. 
+
+```cmd
+
+factorial(5)
+5 * factorial(4)   
+5 * 4 * factorial(3)
+5 * 4 * 3 * factorial(2)
+5 * 4 * 3 * 2 * factorial(1)
+5 * 4 * 3 * 2 * 1
+
+120
 
 ```
+<br>
+
+**여기서 왜 `n ==1`을 한건지 궁금해서 여러가지 방식으로 실행을 해보았다.** 
+
+<br>
+
+```py
+# n == 0 이고 리턴 값이 없을때 
+def factorial(n):
+    if n == 0:      
+        return     
+    return n * factorial(n - 1)    
+ 
+print(factorial(5))
+
+# Output
+# >>> TypeError: unsupported operand type(s) for *: 'int' and 'NoneType'
+
+# n == 0 이고 리턴 값이 0 일때 
+
+def factorial(n):
+    if n == 0:      
+        return  0   
+    return n * factorial(n - 1)    
+ 
+print(factorial(5))
+
+# Output
+# >>> 0
+
+```
+
+납득납득 ...
+
+
+재귀호출은 코드를 간단하게 만들어 주는 장점이있다.
+반대로 디버그 하기가 어렵고 메모리를 많이 잡아 먹는것과 동시에 시간도 소비한다.      
+그래서 사용할때 잘 생각하고 사용하는것을 권장한다.       
+
+조금 어려워서 재귀호출을 생략 할까라는 생각도 했지만 
+한번쯤은 코드를 보고 경험하는것이 좋다고 판단해서 정리하고 넘어간다. 
 
 <br>
 
@@ -125,10 +186,3 @@ print(factorial(5))
 ## Reference <br>
 
 - 파이썬 코딩도장 &nbsp; : &nbsp;<https://dojang.io/> <br>
-
-
-
-
-<dum>
-- SchoolOfWeb &nbsp; : &nbsp;  <http://schoolofweb.net/> <br>
-- 끝나지 않는 프로그래밍 일기 &nbsp; : &nbsp; <https://blog.hexabrain.net/347>
