JUST DO IT_2020.06.19

--- a/Python/4.심화_클래스.md
+++ b/Python/4.심화_클래스.md
@@ -6,14 +6,143 @@
 
 # 클래스
 
+클래스는 객체(Object)를 표현하기 위한 문법이다.<br>
+     
+프로그래밍으로 객체를 만들 때 사용하는 것이 클래스이다. 
 
 <br>
 
-## 1.
+
+예를 들어<br>
+
+게임을 만든다고 하면 전사, 법사, 궁수, 암살자 등 직업별로 클래스를 만들어서 표현가능하다.
+
+기본적으로 게임 캐릭터는 체력(피), 마나, 물리공격력, 마법공격력, 방어력 등등이 필요하다.<br>
+
+그리고 전사는 무기를 이용해서 베기, 찌르기 등등의 스킬이 있어야 한다. 
+
+<br>
+
+자 ! <br>
+
+클래스의 속성(Attribute) -> 체력(피), 마나, 물리공격력, 마법공격력, 방어력 <br>
+
+클래스의 메서드(Method)  -> 무기를 이용해서 베기, 찌르기 등등의 액션 <br>
+
+클래스의 속성과 메서드는 아주 중요하기 때문에 만약 모르겠다면 혹은 감이 안잡힌다면 다른 예제를 찾아보고 개념을 잘 숙지 하는것을 추천한다. 
+
+<br>
+
+만약 Car 로 예를 들어보면 아래와 같다.
+
+클래스의 속성(Attribute)   -> 색상, 연식, 속도, 기어 <br>
+
+클래스의 메서드(Method)  -> 가속, 감속, 정지, 시동, 기어변경 (동작)<br>
+
+
+
+<br>
+
+객체지향 프로그래밍은 복잡한 문제를 잘게 나누어(분해) 객체로 만들고, 객체를 조합(조립)해서 문제를 해결한다. <br>
+따라서 복잡한 문제를 해결하는데 유용하며 기능을 개선하고 발전시킬 때도 해당 클래스만 수정하면 되기 때문에 유지보수에도 효율적이다. <br>
+
+
+※ 참고로 파이썬은 모든것이 객체이다.
+
+<br>
+<br>
+
+## 1.  클래스 & 메서드
+
+<br>
+
+### 클래스의 기본 구조 
 
 <br>
 
 ```py
+
+class 클래스이름:
+    def 메서드(self):
+        code
+
+```
+
+<br>
+
+#### 사람 클래스 예시 
+
+<br>
+
+클래스는 특정 개념을 표현, 인스턴스를 생성해야한다. 
+
+<br>
+
+```py
+
+class Person:
+    def Greeting(self): # 메소드(Method)
+        print('Hello')
+
+Jerry = Person()  # 인스턴스(instance)
+
+```
+<br>
+
+메소드를 호출은 위의 내용에 `Jerry.Greeting()`를 추가하여 실행하면 된다.  <br>
+메서드는 클래스가 아니라 인스턴스를 통해 호출 해야한다. <br>
+`인스턴스.메서드()`(인스턴스 메서드)를 하면 호출가능하다.  <br>
+
+<br>
+
+```py
+
+class Person:
+    def Greeting(self): # 메소드(Method)
+        print('Hello')
+
+Jerry = Person()  # 인스턴스(instance)
+Jerry.Greeting()
+
+# 인스턴스 인지 아닌지 확인 
+isinstance(Jerry, Person)
+
+# OutPut
+# >>> 'Hello'
+# >>> True
+
+```
+
+<br>
+
+인스턴스와 객체의 차이는 유사하하다.
+
+인스턴스를 클래스와 연관을 지어서 말을 할 경우 객체를 인스턴스라고 말한다. <br>
+
+그외의 보통 객체라면 그냥 객체라고 보면 될것 같다. 
+
+나도 아직은 많이 어려운 개념이라 조금 더 자세하게 알아보고 이부분만 상세하게 리뷰 하도록 하겠다.  <br>
+
+<br>
+
+메서드 안에서 메서드를 호출도 가능하다.<br>
+
+
+
+```py
+
+class Person:
+    def greeting(self):
+        print('hello')
+
+    def Hello(self):
+        self.greeting()  # self.메서드() -> 클래스 안의 메서드를 호출 
+
+Jerry = Person()  
+Jerry.Hello()
+
+# OutPut
+# >>> 'Hello'
 
 ```
 
@@ -22,9 +151,12 @@
 
 
 
+
+
 ## 2.
 
 <br>
+
 
 ```py
 
