--- a/Python/1.심화_재귀호출.md
+++ b/Python/1.심화_재귀호출.md
@@ -1,11 +1,11 @@
 <br>
 
-#### 1. 파이썬 심화 - 재귀호출(recursive call)
+#### 1. 파이썬 심화 - 재귀호출(Recursive call)
 <br>
 
-# 재귀호출(recursive call)
+# 재귀호출(Recursive call)
 
-재귀호출 혹은 재귀함수(recursive call)라고 불린다. 
+재귀호출 혹은 재귀함수(Recursive call)라고 불린다. 
 
 - 함수 안에서 함수 자기자신을 호출하는 방식이다. 
 - 다양한 수학문제를 해결하는데 매우유용하고 자주 쓰인다. 
@@ -105,13 +105,13 @@ Func(5)             # Func 함수 호출
 
 ```py
 
-def factorial(n):
+def Factorial(n):
     if n == 1:      
         return 1                    # 1을 리턴하고 재귀호출을 종료
-    return n * factorial(n - 1)     # n과 factorial 함수에 n - 1을 넣어서
+    return n * Factorial(n - 1)     # n과 Factorial 함수에 n - 1을 넣어서
                                     # 리턴된 값을 곱함 -> 이게 핵심 
  
-print(factorial(5))
+print(Factorial(5))
 # Output
 # >>> 120 
 ```
@@ -120,11 +120,11 @@ print(factorial(5))
 
 ```cmd
 
-factorial(5)
-5 * factorial(4)   
-5 * 4 * factorial(3)
-5 * 4 * 3 * factorial(2)
-5 * 4 * 3 * 2 * factorial(1)
+Factorial(5)
+5 * Factorial(4)   
+5 * 4 * Factorial(3)
+5 * 4 * 3 * Factorial(2)
+5 * 4 * 3 * 2 * Factorial(1)
 5 * 4 * 3 * 2 * 1
 
 120
@@ -138,24 +138,24 @@ factorial(5)
 
 ```py
 # n == 0 이고 리턴 값이 없을때 
-def factorial(n):
+def Factorial(n):
     if n == 0:      
         return     
-    return n * factorial(n - 1)    
+    return n * Factorial(n - 1)    
  
-print(factorial(5))
+print(Factorial(5))
 
 # Output
 # >>> TypeError: unsupported operand type(s) for *: 'int' and 'NoneType'
 
 # n == 0 이고 리턴 값이 0 일때 
 
-def factorial(n):
+def Factorial(n):
     if n == 0:      
         return  0   
-    return n * factorial(n - 1)    
+    return n * Factorial(n - 1)    
  
-print(factorial(5))
+print(Factorial(5))
 
 # Output
 # >>> 0
@@ -165,9 +165,9 @@ print(factorial(5))
 납득납득 ...
 
 
-재귀호출은 코드를 간단하게 만들어 주는 장점이있다.
-반대로 디버그 하기가 어렵고 메모리를 많이 잡아 먹는것과 동시에 시간도 소비한다.      
-그래서 사용할때 잘 생각하고 사용하는것을 권장한다.       
+재귀호출은 코드를 간단하게 만들어 주는 장점이있다.     
+반대로 디버그 하기가 어렵고 메모리를 많이 잡아 먹는것과 동시에 시간도 소비한다.           
+그래서 사용할때 잘 생각하고 사용하는것을 권장한다.            
 
 조금 어려워서 재귀호출을 생략 할까라는 생각도 했지만 
 한번쯤은 코드를 보고 경험하는것이 좋다고 판단해서 정리하고 넘어간다. 
