--- a/Python/1.심화_재귀호출.md
+++ b/Python/1.심화_재귀호출.md
@@ -174,6 +174,24 @@ print(Factorial(5))
 
 <br>
 
+### 참고 - isinstance 
+
+
+팩토리얼 함수는 실수와 음의 정수는 계산할 수 없다.
+이 경우에 `isinstance`를 사용하여 숫자(객체)가 **정수일 때만 계산하도록** 만들 수 있다.
+
+```py
+
+def Factorial(n):
+    if not isinstance(n, int) or n < 0:    # n이 정수가 아니거나 음수이면 함수를 끝냄
+        return None
+    if n == 1:
+        return 1
+    return n * Factorial(n - 1)
+
+print(Factorial(3))
+
+```
 
 
 
