--- a/Python/4.심화_클래스_01.md
+++ b/Python/4.심화_클래스_01.md
@@ -44,7 +44,10 @@
 <br>
 
 객체지향 프로그래밍은 복잡한 문제를 잘게 나누어(분해) 객체로 만들고, 객체를 조합(조립)해서 문제를 해결한다. <br>
-따라서 복잡한 문제를 해결하는데 유용하며 기능을 개선하고 발전시킬 때도 해당 클래스만 수정하면 되기 때문에 유지보수에도 효율적이다. <br>
+
+따라서 복잡한 문제를 해결하는데 유용하며<br>
+
+기능을 개선하고 발전시킬 때도 해당 클래스만 수정하면 되기 때문에 유지보수에도 효율적이다. <br>
 
 
 ※ 참고로 파이썬은 모든것이 객체이다.
@@ -89,9 +92,11 @@ Jerry = Person()  # 인스턴스(instance)
 ```
 <br>
 
-메소드를 호출은 위의 내용에 `Jerry.Greeting()`를 추가하여 실행하면 된다.  <br>
+메소드를 호출은 위의 내용에 `Jerry.Greeting()` 를 추가하여 실행하면 된다.  <br>
+
 메서드는 클래스가 아니라 인스턴스를 통해 호출 해야한다. <br>
-`인스턴스.메서드()`(인스턴스 메서드)를 하면 호출가능하다.  <br>
+
+`인스턴스.메서드()` (인스턴스 메서드)를 하면 호출가능하다.  <br>
 
 <br>
 
@@ -105,7 +110,7 @@ Jerry = Person()  # 인스턴스(instance)
 Jerry.Greeting()
 
 # 인스턴스 인지 아닌지 확인 
-isinstance(Jerry, Person)
+isinstance(Jerry, Person)  # 객체의 자료형을 판단할때 사용 
 
 # OutPut
 # >>> 'Hello'
@@ -147,46 +152,119 @@ Jerry.Hello()
 ```
 
 <br>
-
-
-
-
-
-
-## 2.
-
 <br>
 
 
+## 2. 속성(Attribute)
+
+<br>
+
+속성(attribute)을 만들때에는 `__init__` 메서드 안에서 `self.속성` 에 값을 담는다.  
+
+<br>
+
 ```py
+# 이렇게 
+
+class 클래스이름:
+    def __init__(self):
+        self.속성 = result
+
+# 생성자 : 객체를 생성, 초기화(옵션)
 
 ```
 
 <br>
 
+`__init__` (Initialize) 는 인스턴스를 만들 때 호출되는 특별한 메서드이다. <br>
 
+그리고 인스턴스를 초기화한다. <br>
 
-## 3.
-
-<br>
-
-```py
-
-```
-
-<br>
-
-
-
-## 4.
+`self` 는 인스턴스 자기 자신을 의미하며 인스턴스가 생성될때 자기자신에 속성을 부여한다. <br>
 
 <br>
 
 ```py
 
+class Person:
+
+    def __init__(self):
+        self.hello = '안녕!'  # 속성 생성 
+
+    def Greeting(self):
+        print(self.hello)     # 속성 사용 
+
+Jerry = Person()
+Jerry.Greeting()
+
+# Output
+# >>> '안녕!'
+
 ```
 
 <br>
+
+클래스로 인스턴스를 만들때 값을 받는 방법은<br>
+
+`__init__` 메서드를 이용해서 `self` 에 매개변수를 지정한 후 <br>
+
+속성을 부여하면 값을 받을 수 있다. <br>
+
+<br>
+
+```py
+
+class 클래스이름:
+
+    def __init__(self, 매개변수1, 매개변수2):
+        self.속성1 = 매개변수1
+        self.속성2 = 매개변수2
+
+```
+
+<br>
+
+요로케 !! 
+
+<br>
+
+위의 예제를 활용해서 매개변수를 추가해보면 아래와 같다.
+
+
+```py
+
+class Person:
+    """
+    매개변수 : self, 이름, 나이, 주소 
+    """
+
+    def __init__(self, name, age, address):
+        self.hello   = '안녕!'
+        self.name    = name  # self에 넣어서 속성으로 만듦
+        self.age     = age
+        self.address = address
+
+    def Greeting(self):
+        # print('{0} 나는 {1}야!'.format(self.hello, self.name))
+        print(f'{self.hello} 나는 {self.name}야!')
+
+Joy = Person('조이', 30, '인천' )  # 인스턴스 생성 
+Joy.Greeting()
+
+print('이름:', Joy.name)     # 외부에서 인스턴스에 접근 할 경우 
+print('나이:', Joy.age)      # 인스턴스.속성 형식으로 접근 -> 인스턴스 속성
+print('주소:', Joy.address)    
+
+# Output
+# >>>  안녕! 나는 조이야!
+# >>>  이름: 조이
+# >>>  나이: 30
+# >>>  주소: 인천
+
+```
+
+매개변수는 말그대로 변수이지만 어떠한 매개체를 이용해서 변수로서 역활을 한다고 보면 될것같다. 그 매개체가 클래스 자기자신인거고 
+
 
 
 
@@ -200,3 +278,5 @@ Jerry.Hello()
 
 - 파이썬 코딩도장 &nbsp; : &nbsp;<https://dojang.io/> <br>
 
+
+※ 혹시 문제가 있으면 알려주세요 !! 
