--- a/Python/4.심화_클래스_01.md
+++ b/Python/4.심화_클래스_01.md
@@ -262,16 +262,16 @@ print('주소:', Joy.address)
 # >>>  주소: 인천
 
 ```
+<br>
 
 매개변수는 말그대로 변수이지만 <br>
 
 어떠한 매개체를 이용해서 변수로서 역활을 한다고 보면 될것같다. <br>
 
-그 매개체가 클래스 자기자신이라고 보면 될 것 같다!! <br>
+그 매개체가 클래스 자기자신인거고 <br>
 
 
-
-
+<br>
 <br>
 
 ---
@@ -284,4 +284,6 @@ print('주소:', Joy.address)
 
 <br>
 
-    ※ 혹시 문제가 있으면 알려주세요 !! 
+    ※ 혹시 수정사항 있으면 알려주세요 !! 
+
+<br>
