JUST DO IT_2020.06.20

--- a/Python/1.심화_재귀호출.md
+++ b/Python/1.심화_재귀호출.md
@@ -1,6 +1,6 @@
-<br>
 
 #### 1. 파이썬 심화 - 재귀호출(Recursive call)
+
 <br>
 
 # 재귀호출(Recursive call)
@@ -11,14 +11,14 @@
 - 다양한 수학문제를 해결하는데 매우유용하고 자주 쓰인다. 
     - 팩토리얼
     - 피보나치 수열
-    - 등등 
+    - 그외...
 
 - 일반적인 상황에서 잘 사용하지 않는다.
 - 알고리즘을 만들때 유용하다.
     - 보통 알고리즘은 반복문으로 구현한 코드보다      
     재귀호출로 구현한 코드가 좀 더 직관적이고 이해하기 쉬운 경우가 많다.
 
-- 코드는 간단하지만 머리속으로 많은 생각을 요한다. 
+- 코드는 간단하지만 머리속으로 많은 생각을 필요로 한다. 
 
  
 <br>
@@ -36,16 +36,18 @@
 ```py
 
 def Func():
+
     print('Hello, world!')
     Func() # 재귀호출
  
 Func()     # 호출
 
 ```
+
 <br>
 
 이렇게 반복된다.       
-이런 경우 `Ctrl+C`를 통해 `KeyboardInterrupt`를 발생시켜서 함수를 빠져 나올 수 있다. 
+이런 경우 `Ctrl+C` 를 통해 `KeyboardInterrupt` 를 발생시켜서 함수를 빠져 나올 수 있다. 
 
 <br>
 
@@ -74,11 +76,13 @@ Func
 ## 재귀호출 - 종료 조건 
 
 <br>
+
 재귀 호출을 빠져 나오기 위해서는 while문에서 사용한것처럼 if문을 이용해서 빠져 나올 수 있다.
 
 ```py
 
 def Func(cnt):
+
     if cnt == 0:    # 종료 조건을 만족하는 cnt==0이되면 함수를 호출하지 않음 
                     # cnt가 0이 아니면 다시 Func 함수를 호출
         return
@@ -106,6 +110,7 @@ Func(5)             # Func 함수 호출
 ```py
 
 def Factorial(n):
+
     if n == 1:      
         return 1                    # 1을 리턴하고 재귀호출을 종료
     return n * Factorial(n - 1)     # n과 Factorial 함수에 n - 1을 넣어서
@@ -130,6 +135,7 @@ Factorial(5)
 120
 
 ```
+
 <br>
 
 **여기서 왜 `n ==1`을 한건지 궁금해서 여러가지 방식으로 실행을 해보았다.** 
@@ -137,8 +143,10 @@ Factorial(5)
 <br>
 
 ```py
+
 # n == 0 이고 리턴 값이 없을때 
 def Factorial(n):
+
     if n == 0:      
         return     
     return n * Factorial(n - 1)    
@@ -151,6 +159,7 @@ print(Factorial(5))
 # n == 0 이고 리턴 값이 0 일때 
 
 def Factorial(n):
+
     if n == 0:      
         return  0   
     return n * Factorial(n - 1)    
@@ -161,6 +170,8 @@ print(Factorial(5))
 # >>> 0
 
 ```
+
+<br>
 
 납득납득 ...
 
@@ -178,11 +189,12 @@ print(Factorial(5))
 
 
 팩토리얼 함수는 실수와 음의 정수는 계산할 수 없다.
-이 경우에 `isinstance`를 사용하여 숫자(객체)가 **정수일 때만 계산하도록** 만들 수 있다.
+이 경우에 `isinstanc ` 를 사용하여 숫자(객체)가 **정수일 때만 계산하도록** 만들 수 있다.
 
 ```py
 
 def Factorial(n):
+
     if not isinstance(n, int) or n < 0:    # n이 정수가 아니거나 음수이면 함수를 끝냄
         return None
     if n == 1:
