--- a/Python/2.심화_변수.md
+++ b/Python/2.심화_변수.md
@@ -1,6 +1,6 @@
-<br>
 
 #### 2. 파이썬 심화 - 변수
+
 <br>
 
 # 변수 
@@ -9,7 +9,7 @@
 
 <br>
 
-## 전역변수(global variable) 
+## 전역변수(Global variable) 
 
 - 함수 밖에서 만들어진 변수 
 
@@ -17,13 +17,12 @@
 
 - 프로그램이 복잡해질수록 골치 아파지는 변수  
 
-
-
 <br>
 
 ###  전역변수 예제 
 
 ```py
+
 # 전역변수 예제 
 
 x = 100  
@@ -37,10 +36,11 @@ print(x)
 # >>> 100
 # >>> 100
 
-```    
+```   
+
 <br>
 
-## 지역변수(local variable)
+## 지역변수(Local variable)
 
 - 함수 안에서 만들어 진 변수 그래서 함수 내부에서 동작
 - 함수의 외부에서는 지역변수를 호출 x
@@ -51,6 +51,7 @@ print(x)
 
 
 ```py
+
 ## 지역변수 예제 
 
 x = 100  
@@ -64,18 +65,20 @@ print(x)
 # Output
 # >>> 10
 # >>> 100
+
 ```
+
 <br>
 
-## 함수안에서 전역변수의 값을 변경 - global 사용 
+## 함수안에서 전역변수의 값을 변경 - Global 사용 
 
 - 함수안에서 전역변수의 값을 변경하려면 `global` 
     - 함수의 단계 상관없이 `global` 키워드를 사용하면 무조건 전역 변수를 사용하게 된다. 
+
 <br>
 
-
-
 ```py
+
 x = 100  
 def val():
 
@@ -89,7 +92,9 @@ print(x)
 # Output
 # >>> 100
 # >>> 100
+
 ```
+
 <br>
 <br>
 
@@ -98,25 +103,27 @@ print(x)
 ```py
 ## global 사용 
 x = 1                   # 1번
-def Fst_Phase():
+def fstPhase():
     x = 50              # 2번
-    def Fst_Part():
+    def fstPart():
         x = 70          # 3번
-        def Fst_Step():
+        def fstStep():
             global x    # 1번 변수를 호출해서 사용 
 
             x = x + 80  # 1 + 80 = 81
             print(x)
 
-        Fst_Step()
+        fstStep()
 
-    Fst_Part()
+    fstPart()
 
-Fst_Phase()
+fstPhase()
 
 # Output
 # >>> 81 
+
 ```
+
 <br>
 
  함수에서 값을 주고 받을 경우에는 매개 변수와 변환 값을 사용하는 것이 좋다. <br>
@@ -138,6 +145,7 @@ Fst_Phase()
 ## 지역변수 변경
 def Outer():
     x = 35         # Outer의 지역변수 x
+
     def Inner():
         x = 25     # Inner의 지역변수 x
     Inner()
@@ -147,7 +155,9 @@ Outer()
 
 # Output
 # >>> 35 -> 당연한 결과 -> Outer함수의 지역변수를 호출
+
 ```
+
 <br>
 
 이중 함수 안의 지역변수를 이중함수 밖(Outer에서)에서     
@@ -161,7 +171,8 @@ Outer()
 
 # Inner의 x를 출력하려면
 def Outer():
-    x = 35          # 지역변수 x
+    x = 35     
+         # 지역변수 x
     def Inner():
         nonlocal x  # 현재 함수의 외부에서 이 지역변수를 사용 가능 
                     # -> 잘 사용 할 일은 없을것 
@@ -172,7 +183,9 @@ def Outer():
 Outer() 
 # Output
 # >>> 25 # Outer함수의 지역변수가 아니라 Inner함수의 지역변수를 호출  
+
 ```
+
 <br>
 
 `nonlocal`을 어디서, 왜 써야하는지 감이안와서 이해를 위해 조금 더 알아봤다.     
@@ -180,8 +193,10 @@ Outer()
 <br>
 
 ```py
+
 def Outer():
     x = 10
+
     def Inner():
         x += 10
         print('x:', x)
@@ -192,6 +207,7 @@ Outer()
 # >>> UnboundLocalError: local variable 'a' referenced before assignment
 
 ```
+
 <br>
 
 이 경우 `UnboundLocalError: local variable 'a' referenced before assignment` 라는 에러가 발생하는데,    
@@ -207,6 +223,7 @@ Outer()
 # nonlocal을 추가 
 def Outer():
     x = 10
+
     def Inner():
         nonlocal x # 추가된 항목
         x += 10
