--- a/Python/4.심화_클래스_01.md
+++ b/Python/4.심화_클래스_01.md
@@ -1,10 +1,12 @@
-<br>
 
-#### 4. 파이썬 심화 - 클래스
+#### 4. 파이썬 심화 - 클래스_01
 
 <br>
 
 # 클래스
+
+<br>
+
 
 클래스는 객체(Object)를 표현하기 위한 문법이다.<br>
      
@@ -66,6 +68,7 @@
 ```py
 
 class 클래스이름:
+
     def 메서드(self):
         code
 
@@ -84,12 +87,15 @@ class 클래스이름:
 ```py
 
 class Person:
+
     def Greeting(self): # 메소드(Method)
+
         print('Hello')
 
 Jerry = Person()  # 인스턴스(instance)
 
 ```
+
 <br>
 
 메소드를 호출은 위의 내용에 `Jerry.Greeting()` 를 추가하여 실행하면 된다.  <br>
@@ -103,7 +109,9 @@ Jerry = Person()  # 인스턴스(instance)
 ```py
 
 class Person:
+
     def Greeting(self): # 메소드(Method)
+
         print('Hello')
 
 Jerry = Person()  # 인스턴스(instance)
@@ -133,14 +141,16 @@ isinstance(Jerry, Person)  # 객체의 자료형을 판단할때 사용
 메서드 안에서 메서드를 호출도 가능하다.<br>
 
 
-
 ```py
 
 class Person:
+
     def greeting(self):
+
         print('hello')
 
     def Hello(self):
+
         self.greeting()  # self.메서드() -> 클래스 안의 메서드를 호출 
 
 Jerry = Person()  
@@ -164,11 +174,14 @@ Jerry.Hello()
 <br>
 
 ```py
+
 # 이렇게 
 
 class 클래스이름:
-    def __init__(self):
-        self.속성 = result
+
+    def __init__(self): 
+
+        self.속성 = 값
 
 # 생성자 : 객체를 생성, 초기화(옵션)
 
@@ -189,9 +202,11 @@ class 클래스이름:
 class Person:
 
     def __init__(self):
+
         self.hello = '안녕!'  # 속성 생성 
 
     def Greeting(self):
+
         print(self.hello)     # 속성 사용 
 
 Jerry = Person()
@@ -217,6 +232,7 @@ Jerry.Greeting()
 class 클래스이름:
 
     def __init__(self, 매개변수1, 매개변수2):
+
         self.속성1 = 매개변수1
         self.속성2 = 매개변수2
 
@@ -234,11 +250,13 @@ class 클래스이름:
 ```py
 
 class Person:
+
     """
     매개변수 : self, 이름, 나이, 주소 
     """
 
     def __init__(self, name, age, address):
+
         self.hello   = '안녕!'
         self.name    = name  # self에 넣어서 속성으로 만듦
         self.age     = age
@@ -262,6 +280,7 @@ print('주소:', Joy.address)
 # >>>  주소: 인천
 
 ```
+
 <br>
 
 매개변수는 말그대로 변수이지만 <br>
@@ -269,6 +288,92 @@ print('주소:', Joy.address)
 어떠한 매개체를 이용해서 변수로서 역활을 한다고 보면 될것같다. <br>
 
 그 매개체가 클래스 자기자신인거고 <br>
+
+<br>
+
+
+
+## 3. 비공개 속성 (Private attribute )
+
+<br>
+
+Person 클래스에는 hello, name, age, address 속성을 활용해서<br>
+
+클래스 외부에서는 접근이 불가하고 내부에서만 사용가능한 비공개 속성에 대해서 알아보자 <br>
+
+비공개 속성은 `__속성` 과 같이 (`__`)로 만들어져야한다. <br>
+
+**`__속성` 과 `__속성__` 은 다르다.** <br>
+
+비공개 속성은 클래스 외부에 드러내고 싶지않은 값을 다룰때 사용한다. <br>
+
+중요한값일경울 더더욱 외부에 공개되서는 안될때 비공개 속성을 사용한다. <br>
+
+<br>
+
+기본 구조는 아래와 같다.
+
+<br>
+
+```py
+
+class 클래스이름:
+
+    def __init__(self, 매개변수)
+        self.__속성 = 값 
+
+```
+<br>
+
+이전에 했던 실습에 활용 해보면 
+
+<br>
+
+```py
+
+class Person:
+
+    """
+    매개변수   : self, 이름, 나이, 주소 
+    비공개속성 :  지갑
+    """
+
+    def __init__(self, name, age, address, wallet):
+
+        self.hello    = '안녕!'
+        self.name     = name      # self에 넣어서 속성으로 만듦
+        self.age      = age
+        self.address  = address
+        self.__wallet = wallet    #  __를 붙여서 비공개 속성
+
+    def Greeting(self):
+
+        # print('{0} 나는 {1}야!'.format(self.hello, self.name))
+        print(f'{self.hello} 나는 {self.name}야!')
+
+    def pay(self, amount):
+
+        if amount > self.__wallet:
+            print('금액 부족')
+            return
+
+        self.__wallet -= amount   # 1. 비공개 속성은 클래스 안의 메서드에서만 접근가능
+        print(f'잔여 금액 : {self.__wallet}원')
+
+
+Joy = Person('조이', 30, '인천', 500000 )  # 인스턴스 생성 
+# Joy.__wallet                    # 비공개 속성이라 외부에서 접근 불가능 -> 에러발생 
+Joy.pay(3900)  
+
+# Output
+# >>> 잔여 금액 : 496100원
+
+```
+
+<br>
+
+아직은 언제 어느때에 써야할지 잘 모르겠지만 꽤나 유용해보인다. 
+
 
 
 <br>
