JUST DO IT_2020.06.21

--- a/Python/4.심화_클래스_01.md
+++ b/Python/4.심화_클래스_01.md
@@ -29,9 +29,9 @@
 
 클래스의 속성(Attribute) -> 체력(피), 마나, 물리공격력, 마법공격력, 방어력 <br>
 
-클래스의 메서드(Method)  -> 무기를 이용해서 베기, 찌르기 등등의 액션 <br>
+클래스의 메소드(Method)  -> 무기를 이용해서 베기, 찌르기 등등의 액션 <br>
 
-클래스의 속성과 메서드는 아주 중요하기 때문에 만약 모르겠다면 혹은 감이 안잡힌다면 다른 예제를 찾아보고 개념을 잘 숙지 하는것을 추천한다. 
+클래스의 속성과 메소드는 아주 중요하기 때문에 만약 모르겠다면 혹은 감이 안잡힌다면 다른 예제를 찾아보고 개념을 잘 숙지 하는것을 추천한다. 
 
 <br>
 
@@ -39,7 +39,7 @@
 
 클래스의 속성(Attribute)   -> 색상, 연식, 속도, 기어 <br>
 
-클래스의 메서드(Method)  -> 가속, 감속, 정지, 시동, 기어변경 (동작)<br>
+클래스의 메소드(Method)  -> 가속, 감속, 정지, 시동, 기어변경 (동작)<br>
 
 
 
@@ -57,7 +57,7 @@
 <br>
 <br>
 
-## 1.  클래스 & 메서드
+## 1.  클래스 & 메소드
 
 <br>
 
@@ -69,7 +69,7 @@
 
 class 클래스이름:
 
-    def 메서드(self):
+    def 메소드(self):
         code
 
 ```
@@ -100,9 +100,9 @@ Jerry = Person()  # 인스턴스(instance)
 
 메소드를 호출은 위의 내용에 `Jerry.Greeting()` 를 추가하여 실행하면 된다.  <br>
 
-메서드는 클래스가 아니라 인스턴스를 통해 호출 해야한다. <br>
+메소드는 클래스가 아니라 인스턴스를 통해 호출 해야한다. <br>
 
-`인스턴스.메서드()` (인스턴스 메서드)를 하면 호출가능하다.  <br>
+`인스턴스.메소드()` (인스턴스 메소드)를 하면 호출가능하다.  <br>
 
 <br>
 
@@ -138,7 +138,7 @@ isinstance(Jerry, Person)  # 객체의 자료형을 판단할때 사용
 
 <br>
 
-메서드 안에서 메서드를 호출도 가능하다.<br>
+메소드 안에서 메소드를 호출도 가능하다.<br>
 
 
 ```py
@@ -151,7 +151,7 @@ class Person:
 
     def Hello(self):
 
-        self.greeting()  # self.메서드() -> 클래스 안의 메서드를 호출 
+        self.greeting()  # self.메소드() -> 클래스 안의 메소드를 호출 
 
 Jerry = Person()  
 Jerry.Hello()
@@ -169,7 +169,7 @@ Jerry.Hello()
 
 <br>
 
-속성(attribute)을 만들때에는 `__init__` 메서드 안에서 `self.속성` 에 값을 담는다.  
+속성(attribute)을 만들때에는 `__init__` 메소드 안에서 `self.속성` 에 값을 담는다.  
 
 <br>
 
@@ -189,7 +189,7 @@ class 클래스이름:
 
 <br>
 
-`__init__` (Initialize) 는 인스턴스를 만들 때 호출되는 특별한 메서드이다. <br>
+`__init__` (Initialize) 는 인스턴스를 만들 때 호출되는 특별한 메소드이다. <br>
 
 그리고 인스턴스를 초기화한다. <br>
 
@@ -221,7 +221,7 @@ Jerry.Greeting()
 
 클래스로 인스턴스를 만들때 값을 받는 방법은<br>
 
-`__init__` 메서드를 이용해서 `self` 에 매개변수를 지정한 후 <br>
+`__init__` 메소드를 이용해서 `self` 에 매개변수를 지정한 후 <br>
 
 속성을 부여하면 값을 받을 수 있다. <br>
 
@@ -357,7 +357,7 @@ class Person:
             print('금액 부족')
             return
 
-        self.__wallet -= amount   # 1. 비공개 속성은 클래스 안의 메서드에서만 접근가능
+        self.__wallet -= amount   # 1. 비공개 속성은 클래스 안의 메소드에서만 접근가능
         print(f'잔여 금액 : {self.__wallet}원')
 
 
