심화_클래스활용 내용 추가_2020.06.21

--- a/Python/5.심화_클래스활용.md
+++ b/Python/5.심화_클래스활용.md
@@ -318,3 +318,10 @@ Person.printCnt()
 ## Reference <br>
 
 - 파이썬 코딩도장 &nbsp; : &nbsp;<https://dojang.io/> <br>
+
+<br>
+<br>
+
+## Practice makes perfect! <br>
+
+- [심화_클래스활용](https://github.com/Jerrykim91/KISS/tree/master/Python/%EC%8B%AC%ED%99%94_%ED%81%B4%EB%9E%98%EC%8A%A4%ED%99%9C%EC%9A%A9)
