--- a/Python/5.심화_클래스활용.md
+++ b/Python/5.심화_클래스활용.md
@@ -277,9 +277,9 @@ class 클래스이름:
 
 <br>
 
-클래스 메서드는 메서드 안에서 클래스 속성, 클래스 메서드에 접근 할때 사용하며 
+클래스 메소드는 메소드 안에서 클래스 속성, 클래스 메소드에 접근 할때 사용하며 
 
-정적 메서드처럼 인스턴스 없이 호출할 수 있다.
+정적 메소드처럼 인스턴스 없이 호출할 수 있다.
 
 `cls()` = `Person()`
 
