JUST DO IT _2020.06.23

--- a/Python/4.심화_클래스_01.md
+++ b/Python/4.심화_클래스_01.md
@@ -72,6 +72,14 @@ class 클래스이름:
     def 메소드(self):
         code
 
+# 동일 
+
+class 클래스이름(object):
+
+    def 메소드(self):
+        code
+
+
 ```
 
 <br>
