--- a/Python/6.심화_클래스상속.md
+++ b/Python/6.심화_클래스상속.md
@@ -46,7 +46,7 @@
 <br>
 <br>
 
-### 상속 기본 구조 
+### 상속 - 기본 구조 
 
 <br>
 
@@ -71,7 +71,7 @@ class 자식클래스(부모클래스):  # ()내부에 부모클래스의 이름
 
 <br>
 
-### 차동차 상속
+### 상속 - 이해하기
 
 <br>
 
@@ -118,7 +118,7 @@ Joy.checkUp()      # 자식클래스의 checkUp 메소드
 
 <br>
 
-포함관계라는 것이 있다. 상속처럼 한번에 이해하고, 활용하기는 어려울수있다. 
+포함관계라는 것이 있다. 상속처럼 한번에 이해하고, 활용하기는 어려울 수 있다. 
 
 이부분은 리뷰하기에는 조금 부족한 느낌이있어 추후 다시 업데이트 하도록 하겠다. 
 
@@ -194,6 +194,8 @@ class PatientChart(Person):
 
 <br>
 
+### 메소드 오버라이딩 - 이해하기 
+
 ```py
 
 class Person:
@@ -246,11 +248,11 @@ class Sister(father):
         self.pretty()
 
 
-brother = Brother()
-brother.handsome()
+Child_b = Brother()
+Child_b.handsome()
  
-Girl = Sister()
-Girl.handsome()
+Child_g = Sister()
+Child_g.handsome()
 
 ```
 
@@ -266,6 +268,9 @@ Girl.handsome()
 
 `super().메소드()`
 
+<br>
+
+###  `super()` - 이해하기 
 
 ```py
 
@@ -297,7 +302,6 @@ print(Joy.hospital)
 <br>
 
 
-
 ```py
 class Person:
 
@@ -327,7 +331,94 @@ Joy.greeting()
 
 <br>
 
+다중상속은 두개 이상의 부모클래스로부터 상속 받아 자식클래스를 생성하는 것을 의미한다. 
+ 
+
+- 장점 
+
+    - 여러 개의 부모 클래스로부터 멤버(메소드) 모두 상속 받을 수 있다는 점에서 매우 강력한 상속 방법
+
+
+- 단점 
+
+    - 상속 받은 부모클래스에 같은 이름의 멤버(메소드)가 존재 
+    - 하나의 클래스를 간접적으로 두번 이상 상속 받을 가능성 존재
+
+
+다 떠나서 다중 상속은 프로그래밍을 복잡하게 만들 수 있다. 
+
+그렇기 때문에 될수로 사용을 자제하는것이 좋다. 
+
+
+<br>
+
+### 다중 상속 - 기본 구조 
+
+<br>
+
+
 ```py
+
+class 부모클래스1:
+    code
+
+class 부모클래스2:
+    code
+ 
+class 자식클래스(부모클래스1, 부모클래스2):  
+    code
+
+```
+
+<br>
+
+### 다중 상속 - 이해하기
+
+
+```py
+
+class Father:
+    
+    def __init__(self):
+        self.fname = '김우빈'
+
+    def fatherName(self):
+        print(f'아빠는 {self.fname} ,')
+
+class Mather:
+
+    def __init__(self):
+        self.mname = '신민아'
+
+    def matherName(self):
+        print(f'엄마는 {self.mname} ,')
+
+class Child(Father,Mather):
+
+    def __init__(self):
+        # super().__init__()
+        Father.__init__(self)
+        Mather.__init__(self)
+        self.name = '김빈아'
+
+    def greeting(self):
+        super().__init__()
+        print(f'저는 {self.name}입니다.')
+
+
+child = Child()
+print(child.__dict__)
+
+child.fatherName()
+child.matherName()
+child.greeting()
+
+# outPut
+
+# >>> {'fname': '김우빈', 'mname': '신민아', 'name': '김빈아'}
+# >>> 아빠는 김우빈 ,
+# >>> 엄마는 신민아 ,
+# >>> 저는 김빈아입니다.
 
 ```
 
@@ -335,23 +426,7 @@ Joy.greeting()
 <br>
 
 
-## 6. 추상 클래스
 
-<br>
-
-```py
-
-```
-
-<br>
-
-
-
-<br>
-
----
-
-<br>
 
 ## Reference <br>
 
@@ -359,7 +434,7 @@ Joy.greeting()
 
 - 개발자의 취미 생활 : <https://rednooby.tistory.com/55?category=633023>
 
-
+- : <https://uzooin.tistory.com/137>
 
 ## Practice makes perfect! <br>
 
