--- a/Python/7.심화_추상클래스.md
+++ b/Python/7.심화_추상클래스.md
@@ -1,6 +1,7 @@
 <br>
 
-#### num. 파이썬 심화 - 예외처리
+#### 7. 파이썬 심화 - 추상 클래스
+
 
 <br>
 
@@ -14,6 +15,8 @@
 
 사용과 구현을 분리한 개념으로 
 
+<br>
+<br>
 
 ## 2. 추상 클래스
 
