JUST DO IT_2020.06.24

--- a/Python/7.심화_추상클래스.md
+++ b/Python/7.심화_추상클래스.md
@@ -13,7 +13,23 @@
 
 <br>
 
-사용과 구현을 분리한 개념으로 
+함수의 이름을 통해서 구체적으로 하는 일의 전체적인 특징(특성)을 추상적으로 보여주는것이라고 보면 될것 같다. 
+
+쉽게 말하자면 하고자하는 것의 전체적인 특징을 보여주는것이다.
+
+예를 들면 단기간 많은 것을 기억해야 할 때 
+
+전부를 기억하는것 보다는 일정한 패턴이나 맥락을 외우면 
+
+기억해야 할 양을 줄여고 효율적인것 같은것처럼 
+
+전체적인 그림을 그릴수 있는것과 같다. 
+
+<br>
+
+### 추상화의 장점 
+
+- 코드의 재사용성, 가독성 향상 => 결국 생산성, 에러의 감소와 같은 요소에 영향
 
 <br>
 <br>
@@ -22,9 +38,11 @@
 
 <br>
 
-- 메서드 목록만 가진 클래스 
-- 상속받는 클래스에서 메서드 구현을 강제하기 위해 사용
+- 메소드 목록**만** 가진 클래스 
+- 상속받는 클래스에서 메소드 구현을 **강요하기** 위해 사용  
+    - 자식 클래스가 **반드시 구현**해야 하는 메소드를 정해줄 수 있음
 
+<br>
 
 ### 추상 클래스 - 기본 구조 
 
@@ -32,57 +50,117 @@
 
 ```py
 
-from Call import * ## Call 모듈의 클래스, 메소드 호출 
-
-# import Call => Call.ABCMeta, @Call.abstractmethod로 사용
+from abc import *
+#import abc       # 일때 abc.ABCMeta, @abc.abstractmethod로 사용
  
 class 추상클래스이름(metaclass=ABCMeta):
 
     @abstractmethod
-    def 메서드이름(self):
+    def 메소드이름(self):
         코드
 
-
 ```
 
 <br>
 
-## 추상 클래스 - 이해하기 
+## 추상 클래스 - 이해하기 1
 
-
-<br>
-
----
-
-<br>
-
-
-
-## 3.
 
 <br>
 
 ```py
 
+# ABC를 정의하기 위한 메타 클래스 ABCMeta
+from abc import ABC
+
+# ABCMeta를 메타 클래스로 가지는 도우미 클래스
+
+class MyABC(ABC):
+    """
+    메타클래스 없이 ABC에서 파생 
+    """
+    pass
+
+# ABC => 여전히  ABCMeta
+
+```
+
+#### 다중 상속이 메타 클래스 충돌을 일으킬 수 있기 때문에 메타 클래스사용할때 주의가 필요 
+
+```py
+
+from abc import ABCMeta
+
+class MyABC(metaclass=ABCMeta):
+    """
+    metaclass 키워드를 전달하고 
+    ABCMeta를 직접 사용해서 추상 베이스 클래스를 정의
+    """
+
+    @abstractmethod
+    def 메소드이름(self):
+        코드
+
 ```
 
 <br>
 
-
-
-## 4.
+## 추상 클래스 - 이해하기 2
 
 <br>
 
 ```py
 
+from abc import *
+ 
+class CookBase(metaclass=ABCMeta):
+
+    """
+    반드시 해야 하는 일을 추상메소드로 구현 
+
+    추상 클래스는 인스턴스로 만들 수 없음 -> 빈메소드를 만들어야하는 이유
+    ㄴ 인스턴스를 만들 수 없다! = 호출할 일이 없다!
+    """
+
+    @abstractmethod
+    def FindRecipe(self):
+        pass
+ 
+    @abstractmethod
+    def Ingredients(self):
+        pass
+ 
+ 
+class Cook(CookBase):
+    """
+    구현할때 Base에서 구현한 item(@abstractmethod 추상메소드)은
+    자식클래스에서 모두 구현 해야한다 - 아니면 에러발생 
+    """
+    def FindRecipe(self):
+        print('요리 레시피 준비')
+ 
+    def Ingredients(self):
+        print('요리재료 준비')
+ 
+
+joy = Cook()
+joy.FindRecipe()
+joy.Ingredients()
+
+# output
+
+# >>> 요리 레시피 준비
+# >>> 요리재료 준비
+
 ```
 
 <br>
 
+추상 클래스는 인스턴스로 만들 때는 사용하지 않으며 오로지 상속에만 사용한다.
 
+그리고 자식 클래스에서 반드시 구현해야 할 메소드를 정해 줄 때 사용한다.
 
-
+<br>
 
 <br>
 
@@ -93,6 +171,8 @@ class 추상클래스이름(metaclass=ABCMeta):
 ## Reference <br>
 
 - 파이썬 코딩도장 &nbsp; : &nbsp;<https://dojang.io/> <br>
+
+- 프로페셔널 프로그래머 &nbsp; : &nbsp; <https://m.blog.naver.com/PostView.nhn?blogId=knix008&logNo=220700047637&proxyReferer=https:%2F%2Fwww.google.com%2F>
 
 <br>
 <br>
