JUST DO IT_2020.06.24

--- a/Python/7.심화_추상클래스.md
+++ b/Python/7.심화_추상클래스.md
@@ -65,7 +65,6 @@ class 추상클래스이름(metaclass=ABCMeta):
 
 ## 추상 클래스 - 이해하기 1
 
-
 <br>
 
 ```py
@@ -179,4 +178,4 @@ joy.Ingredients()
 
 ## Practice makes perfect! <br>
 
-- [내용](주소)
+- [Advanced_OOP_추상클래스](https://github.com/Jerrykim91/KISS/blob/master/Python/%EC%8B%AC%ED%99%94_%ED%81%B4%EB%9E%98%EC%8A%A4%ED%99%9C%EC%9A%A9/Advanced_OOP_%EC%B6%94%EC%83%81%ED%81%B4%EB%9E%98%EC%8A%A4.py)
