--- a/Python/8.심화_예외처리.md
+++ b/Python/8.심화_예외처리.md
@@ -1,15 +1,14 @@
 <br>
 
-#### ??. 파이썬 심화 - ListComprehensions
+#### 8. 파이썬 심화 - 예외처리
 
 <br>
 
-# ListComprehensions
+# 예외처리
 
 <br>
 
-기존 리스트를 사용하여 간단하게 다른 리스트를 만드는 기법 
-## 1.
+## 1. 예외처리
 
 <br>
 
