JUST DO IT_2020.06.25

--- a/Python/8.심화_예외처리.md
+++ b/Python/8.심화_예외처리.md
@@ -8,11 +8,25 @@
 
 <br>
 
-## 1. 예외처리
+예외(exception) 상황 = 코드 실행중 에러가 발생한 상황
+
+<br>
+
+## 1. Try & Except
+
+<br>
+
+예외가 발생했을 때도 스크립트 실행을 중단하지 않고 계속 실행 -> try & except
 
 <br>
 
 ```py
+
+try:
+    실행할 코드
+    
+except:
+    예외가 발생했을 때 처리하는 코드
 
 ```
 
