--- a/Python/7.심화_추상클래스.md
+++ b/Python/7.심화_추상클래스.md
@@ -13,17 +13,16 @@
 
 <br>
 
-함수의 이름을 통해서 구체적으로 하는 일의 전체적인 특징(특성)을 추상적으로 보여주는것이라고 보면 될것 같다. 
+함수의 이름을 통해 구체적으로 하는 일의 전체적인 특징(특성)을 추상적으로 보여주는것이 추상화이다. 
 
 쉽게 말하자면 하고자하는 것의 전체적인 특징을 보여주는것이다.
 
-예를 들면 단기간 많은 것을 기억해야 할 때 
+예를들면 단기간 많은 것을 기억해야 할 때 전부를 기억하는것 보다
 
-전부를 기억하는것 보다는 일정한 패턴이나 맥락을 외우면 
+일정한 패턴이나 글의 맥락을 외우면 기억해야 할 양을 줄이고 
 
-기억해야 할 양을 줄여고 효율적인것 같은것처럼 
+전체적인 그림을 그릴 수 있는 것처럼 하고자하는것을 전달하기쉽게 특징만으로 뽑아서 보여주는것이다.
 
-전체적인 그림을 그릴수 있는것과 같다. 
 
 <br>
 
@@ -84,7 +83,7 @@ class MyABC(ABC):
 
 ```
 
-#### 다중 상속이 메타 클래스 충돌을 일으킬 수 있기 때문에 메타 클래스사용할때 주의가 필요 
+#### 다중 상속이 메타 클래스 충돌을 일으킬 수 있기 때문에 메타 클래스사용할때 주의가 필요하다. 
 
 ```py
 
@@ -178,4 +177,4 @@ joy.Ingredients()
 
 ## Practice makes perfect! <br>
 
-- [Advanced_OOP_추상클래스](https://github.com/Jerrykim91/KISS/blob/master/Python/%EC%8B%AC%ED%99%94_%ED%81%B4%EB%9E%98%EC%8A%A4%ED%99%9C%EC%9A%A9/Advanced_OOP_%EC%B6%94%EC%83%81%ED%81%B4%EB%9E%98%EC%8A%A4.py)
+- [Advanced_OOP_추상클래스](https://github.com/Jerrykim91/KISS/tree/master/Python/%EC%8B%AC%ED%99%94_%ED%81%B4%EB%9E%98%EC%8A%A4%ED%99%9C%EC%9A%A9/Advanced_OOP_%EC%B6%94%EC%83%81%ED%81%B4%EB%9E%98%EC%8A%A4)
