JUST DO IT_2020.06.25

--- a/Python/7.심화_추상클래스.md
+++ b/Python/7.심화_추상클래스.md
@@ -154,9 +154,9 @@ joy.Ingredients()
 
 <br>
 
-추상 클래스는 인스턴스로 만들 때는 사용하지 않으며 오로지 상속에만 사용한다.
-
-그리고 자식 클래스에서 반드시 구현해야 할 메소드를 정해 줄 때 사용한다.
+추상 클래스는 인스턴스로 만들 때는 사용하지 않으며 오로지 상속에만 사용하며
+ 
+자식 클래스에서 반드시 구현해야 할 메소드를 정해 줄 때 사용한다.
 
 <br>
 
