--- a/Python/7.심화_추상클래스.md
+++ b/Python/7.심화_추상클래스.md
@@ -37,9 +37,8 @@
 
 <br>
 
-- 메소드 목록**만** 가진 클래스 
-- 상속받는 클래스에서 메소드 구현을 **강요하기** 위해 사용  
-    - 자식 클래스가 **반드시 구현**해야 하는 메소드를 정해줄 수 있음
+메소드 목록**만** 가진 클래스이며 상속받는 클래스에서 메소드 구현을 **강요하기** 위해 사용한다.  
+- 자식 클래스가 **반드시 구현**해야 하는 메소드를 정해줄 수 있다.
 
 <br>
 
@@ -62,7 +61,7 @@ class 추상클래스이름(metaclass=ABCMeta):
 
 <br>
 
-## 추상 클래스 - 이해하기 1
+### 추상 클래스 - 이해하기 1
 
 <br>
 
@@ -103,7 +102,7 @@ class MyABC(metaclass=ABCMeta):
 
 <br>
 
-## 추상 클래스 - 이해하기 2
+### 추상 클래스 - 이해하기 2
 
 <br>
 
@@ -130,10 +129,12 @@ class CookBase(metaclass=ABCMeta):
  
  
 class Cook(CookBase):
+
     """
     구현할때 Base에서 구현한 item(@abstractmethod 추상메소드)은
     자식클래스에서 모두 구현 해야한다 - 아니면 에러발생 
     """
+
     def FindRecipe(self):
         print('요리 레시피 준비')
  
