--- a/Python/8.심화_예외처리.md
+++ b/Python/8.심화_예외처리.md
@@ -16,7 +16,11 @@
 
 <br>
 
-예외가 발생했을 때도 스크립트 실행을 중단하지 않고 계속 실행 -> try & except
+예외가 발생했을 때도 스크립트 실행을 중단하지 않고 계속 실행한다.  try안에 에러가 발생할것같은 코드를 넣고  except 예외가 발생했을 때 처리하는 코드를 추가하면  에러발생시 잘 대처할수 있다. 
+
+<br>
+
+### Try & Except - 기본 구조 
 
 <br>
 
@@ -32,47 +36,257 @@ except:
 
 <br>
 
-
-
-
-## 2.
+### Try & Except - 이해하기
 
 <br>
 
 ```py
 
+try:
+    num = int(input('숫자만!:'))   # 예외가 발생하면 코드 실행을 중단 
+    print(f'{num}는 숫자입니다.')  # except로 가서 코드 실행 
+
+# try의 코드에서 에러가 발생했을 때 실행됨
+except:    
+    print('숫자가 아닙니다.예외가 발생했습니다.')
+
 ```
 
 <br>
+<br>
 
 
+## 2. 특정 예외 처리
 
-## 3.
+<br>
+
+except 부분에 예외 이름을 지정 후 특정한 예외상황이 발생했을 경우 코드가 실행된다. 
+
+<br>
+
+### 특정 예외 처리 - 기본 구조 
 
 <br>
 
 ```py
 
+try:
+    실행할 코드
+    
+except 예외이름:
+    예외가 발생했을 때 처리하는 코드
+
 ```
 
 <br>
 
-
-
-## 4.
+### 특정 예외 처리 - 이해하기
 
 <br>
 
 ```py
 
+y = [10, 20, 30]
+ 
+try:
+    index, x = map(int, input('인덱스와 나눌 숫자를 입력하세요 : ').split())
+    print(y[index] / x)
+
+
+# 2개의 except문을 사용 
+## 숫자를 0으로 나눠서 에러가 발생했을 때 실행됨
+except ZeroDivisionError:    
+    print('숫자를 0으로 나눌 수 없습니다.')
+
+## 범위를 벗어난 인덱스에 접근하여 에러가 발생했을 때 실행됨
+except IndexError:           
+    print('잘못된 인덱스입니다.')
+    
+except ValueError:           
+    print('벗어난 범위 입니다.')
+
 ```
 
 <br>
 
+아래처럼 `except 에러 as e(혹은 err)`  e 변수를 지정해 발생한 예외의 메시지를 함께 출력가능하다. 
+
+예외상황이 여러개 발생 할 경우 먼저 발생한 예외의 처리 코드만 실행 우선적을 실행 
+
+<br>
+
+```py
+
+y = [10, 20, 30]
+ 
+try:
+    index, x = map(int, input('인덱스와 나눌 숫자를 입력하세요 : ').split())
+    print(y[index] / x)
 
 
+except ZeroDivisionError as err :    
+    print('숫자를 0으로 나눌 수 없습니다.', err)
+
+except IndexError as err:           
+    print('잘못된 인덱스입니다.', err)
+
+except ValueError as err:           
+    print('벗어난 범위 입니다.', err)
+
+```
+
+<br>
+<br>
+
+## 3. 모든 예외의 에러 메시지를 출력
+
+<br>
+
+만약 에러 이름을 모를 때 except에 `Exception` 을 지정한다.
+
+<br>
+
+### 모든 예외 처리 - 기본 구조
 
 
+<br>
+
+```py
+
+except Exception as err:    
+    print('예외가 발생했습니다.', err)
+
+```
+
+<br>
+<br>
+
+## 4. 사용자 유도( Raise ) 에러 
+
+<br>
+
+사용자가 직접 에러를 만들어 발생시킬때 주로 사용하며 
+
+많이 사용하면 코드의 가독성이 떨어지기 때문에 정말 필요할 경우 사용하는 것을 추천한다.  
+
+<br>
+
+### Raise 에러 - 이해하기 1
+
+<br>
+
+
+```py
+
+# 올바른 값을 넣지 않으면 에러를 발생시키고 적당한 문구를 표시한다.
+def rsp(mine, yours):
+    allowed = ['가위','바위', '보']
+    if mine not in allowed:
+        raise ValueError
+    if yours not in allowed:
+        raise ValueError
+
+try:
+    rsp('가위', '바')
+except ValueError:
+    print('잘못된 값을 넣었습니다!')
+
+```
+
+<br>
+
+### Raise 에러 - 이해하기 2 \*\*
+
+<br>
+
+```py
+
+# 190이 넘는 학생을 발견하면 반복을 종료
+classRoom  = {
+    '1반' : [150, 156, 179, 191, 199],
+    '2반' : [150, 195, 179, 191, 199] }
+
+try:
+    for class_number, students in classRoom.items():
+        for student in students:
+            if student > 190:
+                print(class_number, '190을 넘는 학생이 있습니다.')
+                # break # 바로 상위 for문은 종료되지만 최고 상위 for문은 종료 X
+                raise StopIteration
+                # 예외가 try 문 안에 있지 않으면 에러 발생시 프로그램이 멈춤
+
+except StopIteration:
+    print('정상종료')   
+
+```
+
+<br>
+<br>
+
+## 5. if else 사용
+
+<br>
+
+상황에 따라 예외처리 대신 if else를 사용하여 작업이 가능하다. 
+
+<br>
+
+### Try & Except 과 if else 비교 
+
+<br>
+
+
+```py
+
+# Try & Except
+
+def idx_print(list, index):
+	"""
+	list 와 index를 입력받아야함 
+	"""
+	try:
+		print(list.pop(index))
+	except IndexError:
+		print(f'{index} : index의 값을 가져올 수 없습니다.')
+
+idx_print([1,2,3], 1 )
+idx_print([1,2,3], 10 )	  # index 길이 초과 
+						# -> 10 : index의 값을 가져올 수 없습니다.
+
+# if 문
+def idx_print(list, index):
+	"""
+	list 와 index를 입력받아야함 
+	"""
+    if index < len(list):
+        print(list.pop(index))
+    else:
+        print('{} index의 값을 가져올 수 없습니다.'.format(index))
+
+idx_print([1,2,3], 0 )
+idx_print([1,2,3], 5 )	  # index 길이 초과 
+						# -> 5 : index의 값을 가져올 수 없습니다.
+
+```
+
+<br>
+
+### 예외처리를 사용해야  할  경우
+
+<br>
+
+
+```py
+
+try:
+    import 모듈이름
+except ImportError:
+    print('모듈이 없습니다.')
+
+```
+
+
+<br>
 <br>
 
 ---
@@ -82,10 +296,7 @@ except:
 ## Reference <br>
 
 - 파이썬 코딩도장 &nbsp; : &nbsp;<https://dojang.io/> <br>
+- 초보몽키의 개발공부로그 &nbsp; : &nbsp;<https://wayhome25.github.io/python/2017/02/26/py-12-exception/> <br>
 
 <br>
 <br>
-
-## Practice makes perfect! <br>
-
-- [내용](주소)
