JUST DO IT_2020.06.26

--- a/Python/8.심화_예외처리_01.md
+++ b/Python/8.심화_예외처리_01.md
@@ -1,6 +1,6 @@
 <br>
 
-#### 8. 파이썬 심화 - 예외처리
+#### 8. 파이썬 심화 - 예외처리_01
 
 <br>
 
@@ -165,7 +165,7 @@ except Exception as err:
 
 <br>
 
-사용자가 직접 에러를 만들어 발생시킬때 주로 사용하며 
+사용자가 **직접 에러**를 만들어 발생시킬때 주로 사용하며 
 
 많이 사용하면 코드의 가독성이 떨어지기 때문에 정말 필요할 경우 사용하는 것을 추천한다.  
 
@@ -178,18 +178,18 @@ except Exception as err:
 
 ```py
 
-# 올바른 값을 넣지 않으면 에러를 발생시키고 적당한 문구를 표시한다.
+# 올바른 값을 넣지 않으면 에러를 발생시키고 적당한 문구를 표시
 def rsp(mine, yours):
     allowed = ['가위','바위', '보']
     if mine not in allowed:
-        raise ValueError
-    if yours not in allowed:
+        raise ValueError       # 함수 외부에서 예외를 발생
+    if yours not in allowed:   # except이 나올때까지 상위로 올라감 
         raise ValueError
 
 try:
-    rsp('가위', '바')
+    rsp('가위', '바')  # 함수를 try문 안에 집어 넣음 
 except ValueError:
-    print('잘못된 값을 넣었습니다!')
+    print('잘못된 값을 넣었습니다!') 
 
 ```
 
@@ -221,6 +221,113 @@ except StopIteration:
 ```
 
 <br>
+
+### Re-Raise 에러 - 이해하기 
+
+<br>
+
+Try & Except 에서 처리한 예외를 다시 발생시키는 방법으로 
+
+except 안에서 raise를 사용하면 현재 예외를 다시 발생시킨다.(Re-Raise)
+
+<br>
+
+```py
+
+# 올바른 값을 넣지 않으면 에러를 발생시키고 적당한 문구를 표시
+def rsp(mine, yours):
+
+    allowed = ['가위','바위', '보']
+
+    if mine not in allowed:
+        raise Exception('잘못된 값을 넣었습니다!') 
+        print(mine)
+
+    if yours not in allowed:   
+        raise Exception('잘못된 값을 넣었습니다!') 
+        print(yours)
+
+try:
+    rsp('가위', '바')  # 함수를 try문 안에 집어 넣음 
+
+except Exception as e:                                 # 하위 코드 블록에서 예외가 발생해도 실행됨
+    print('스크립트 파일에서 예외가 발생했습니다.', e)
+
+```
+
+
+<br>
+
+### Re-Raise 에러 - 활용하기(LottoChecker System)
+
+<br>
+
+#### LottoChecker System
+
+```py
+
+def LottoNumber(x, maxNum=46):
+    """
+    LottoNumber : 1-45까지 랜덤으로 x개의 번호 부여 
+    """
+    import random 
+    tmp = list(range(1,maxNum))
+    random.shuffle(tmp)
+    x = int(x)
+    cnt = 0
+    number = []
+    
+    for num in tmp:
+        cnt += 1 
+        if cnt <= x : 
+            number.append(num)
+            pass
+
+    return number
+
+
+def LottoChecker( rang=6 ):
+    
+    """
+    LottoNumber 에서 생성한 정답과 내가 입력한 정답 비교 
+
+    """
+
+    myLotto = [ i for i in map(int, input('1-45까지 6개의 숫자를 입력하세요 : ').split())]
+    
+    if len(myLotto) != rang:
+        raise Exception(f'{len(myLotto)} 는 6 개') 
+
+    elif len(set(myLotto))!= rang:
+        raise Exception(' 값이 중복 됩니다.')
+    
+    c = 0
+    dum = []
+    LottoWinningNumber = sorted(LottoNumber(int(rang)))
+
+    for i in myLotto :
+        if i in LottoWinningNumber:
+            c += 1
+            print(f"{c}개 맞았습니다.")
+
+            if c == 6:
+                print('다 맞았습니다. 잊지말고 로또 사세요!')
+         
+        else:
+            dum.append(i)
+    
+    print(f'{c}개 맞았습니다. {sorted(dum)} not in {LottoWinningNumber}') 
+
+       
+try:
+    LottoChecker()
+
+except Exception as e:  # 하위 코드 블록에서 예외가 발생해도 실행됨
+
+    print('스크립트 파일에서 예외가 발생했습니다.', e)  
+
+```
+
 <br>
 
 ## 5. if else 사용
@@ -271,7 +378,7 @@ idx_print([1,2,3], 5 )	  # index 길이 초과
 
 <br>
 
-### 예외처리를 사용해야  할  경우
+### 예외처리를 사용해야 할 경우
 
 <br>
 
