Just do it_2020.06.26

--- a/Python/8.심화_예외처리.md
+++ b/Python/8.심화_예외처리.md
@@ -392,6 +392,59 @@ except ImportError:
 
 ```
 
+<br>
+<br>
+
+## 6. 예외가 발생하지 않았을 때 Else 
+
+<br>
+
+### Try & Except & Else - 기본 구조 
+
+
+예외가 발생하지 않았을 때 코드를 실행하는 else 를 Try & Except 아래에 추가한다. 
+except은 생략할 수 없다. 
+
+<br>
+
+```py
+
+try:
+    실행할 코드
+except:
+    예외가 발생했을 때 처리하는 코드
+else:
+    예외가 발생하지 않았을 때 실행할 코드
+
+```
+
+<br>
+<br>
+
+
+## 7. 항상 코드를 실행하는 Finally
+
+<br>
+
+### Try & Except & Else & Finally - 기본 구조 
+
+
+Finally는 항상 코드를 실행하며 except와 else를 생략가능하다. 
+
+<br>
+
+```py
+
+try:
+    실행할 코드
+except:
+    예외가 발생했을 때 처리하는 코드
+else:
+    예외가 발생하지 않았을 때 실행할 코드
+finally:
+    예외 발생 여부와 상관없이 항상 실행할 코드
+
+```
 
 <br>
 <br>
