JUST DO IT_2020.06.30

--- a/Python/10.심화_정규표현식.md
+++ b/Python/10.심화_정규표현식.md
@@ -123,13 +123,12 @@ print(src_search) #  match='$%AB'
 
 ## Reference <br>
 
-- 파이썬 코딩도장 &nbsp; : &nbsp;<https://dojang.io/> <br>
+- 패스트 캠퍼스 &nbsp; : &nbsp;<https://www.fastcampus.co.kr/> <br>
 
 <br>
 <br>
 
 ## Practice makes perfect! <br>
 
-- [내용](주소)
-
+<!-- - [내용](주소) -->
 
