just do it_2020.07.01

--- a/Python/아직/13.심화_제너레이터.md
+++ b/Python/아직/13.심화_제너레이터.md
@@ -1,18 +1,14 @@
 <br>
 
-#### 9. 파이썬 심화 - 데코레이터 
+#### 13. 파이썬 심화 - 제너레이터
 
 <br>
 
-# 데코레이터 
+# 주제
 
 <br>
 
-## 1. 데코레이터란
-
-
- 
-
+## 1.
 
 <br>
 
