--- a/Python/기본/2.기본_기본요소.md
+++ b/Python/기본/2.기본_기본요소.md
@@ -1,37 +1,39 @@
 <br>
 
-#### 1. 파이썬 기본 - 타입 & 변수
+#### 2. 파이썬 기본 - 기본요소
 
 <br>
 
-# 기본타입 & 변수 
+# 기본요소  
 
 <br>
 
-## 1. 기본데이터  
+## 1. 수치형  
 
-기본 데이터 타입 선언 => `int`, `float`, `str`, `bool`
-- 타입을 확인하기 위해서는 `type()`함수를 사용하면 된다. 
+파이썬은 모든것이 객체이다. 
+10은 수치값이 아닌 객체이다 => 주소값이 변수에 세팅된거라서 
 
-### 기본 데이터 타입 
-
-- `int`: 정수(`1,2,3,...`)
-- `float`: 실수(`0.2,0.6,0.8,....`)
-- `str`: 문자열(`'hello','bye',...`)
-- `bool` : `True`,`False`
-
-
-### None
-
-타 언어와 동일한 의미로 아무런 값을 가지고 있지 않을 경우 사용한다. 
-
-변수가 초기 값을 갖고 있지 않게 하기 위해서 `box`라는 변수를 사용하기전 `box = None`으롤 선언한다. (선택사항)
-
-<br>
 
 ```py
-box = None 
-print(box)
+
+# 정수
+a = 10
+print( a )
+
+# 소수 
+a = 1.1
+print( a )
+
+
+
+
+# 일반적인 연산자는 대동소이하다.
+
+# 연산자도 우선순위가 있다
+# *, / 가 +, - 우선한다 => 연산자 우선순위를 다 알면 좋으나,
+# 괄호를 이용하여 () 우선순위 연산을 그룹으로 묶어준다
+(1+2+3+4) * 2 , 1+2+3+4 * 2
+
 ```
 
 
@@ -39,136 +41,65 @@ print(box)
 
 ## 2. 변수 
 
-- 데이터를 저장하는 공간
-- 사전에 정의된 키워드, 내장 함수등의 이름을 변수로 사용 X
-- 메모리에 값을 생성하고 이름을 지정 
-
-
-각 언어마다 변수 이름 규칙이 존재하는데 기본적으로 파이썬의 변수이름 규칙은 아래와 같다. 
-
-
-### 변수 이름 생성 규칙(variable naming)
-
-0. 변수 명은 타언어와 동일하게 사용 
-1. 영문 문자와 숫자를 함께 사용할수 있다. 
-2. 숫자로 시작하는 이름을 제외하고 영문 대소문자, 숫자로 구성가능하다.
-3. 일반적으로 해당 변수를 표현하고자 하는 정확하고 간결한 이름을 사용하는 것이 원칙이다.  
-4. \_(밑줄문자: 언더 스코어) 시작 가능하다. 
-5. 특수문자(+,-,\*,\/,$,@,&,%등)는 사용할수 없다.
-6. 파이썬 키워드(if , for , while, and , or) 등은 사용할수 없다.(예약어) 
-7. 코드를 읽은 것을 더 쉽게 할 수 있다.-> 코드의 이해도가 증가 -> 수정 
-- 예를 들면 a = 10 보다 **apple_count = 10**로 표현한것이 변수에 대한 이해가 쉽고 빠르다.
-
-
-#### 예약어( reserved keywords )
-예약어는 파이썬에서 미리 선점하여 사용중인 키워드이며 선점해서 가지고 있기 때문에 변수, 함수, 클래스 등등의 사용자 정의 이름으로 사용할 수 없다. 
-
 <br>
 
-
-### 대입연산자(=)
-
-'='은 변수에 값을 할당한다라는 의미
-
-- `변수명 = 'hello'`
-
-<br>
-
-### 비교연산자(==)
-
-프로그래밍에서는 수학등호 같은 연산자는 `==`    
-비교를 할 경우, `=` 대신 `==`를 사용
- 
-
-- `만약에 a == b 같다면 `
-- 대입연산자와 다르게 사용되므로 주의 해야 한다. 
-- `<` , `>` (작다, 크다)
-- `<=` , `>=` (작거나 같다, 크거나 같다)
-- `==` 같다
-- `!=` 같지 않다
-- 비교 연산자의 결과는 불린타입으로 출력
 
 <br>
 
 ```py
 
-One = 1
-Ten = 10
 
-print(One < Ten)  # True
-print(One > Ten)  # False
-print(One <= Ten) # True
-print(One >= Ten) # False
-print(One == Ten) # False
-print(One != Ten) # True 
 
 ```
 
 <br>
 <br>
 
-## 3. comment(주석)
+## 3.
 
-코드 이외의 것을 작성할 때 유용하며 개발자가 보기 위한 용도로 사용된다. 
-- 코드나 문자앞에 `#` 붙여서 사용된다.
-- 프로그램이 코드를 실행하면서 `#`를 만나면 무시, 코드만 실행한다.
 
 
 ```py
-# 코드가 실행할때 # 이 있는 라인은 소스코드가 실행 되지 않는다. 
+
 ```
 
 <br>
+
+
 <br>
 
 ## 4. 데이터 출력 
 
-### `print` 함수  
-
-먼저 함수란 특정 기능을 반복적으로 호출하여 사용가능한 코드블럭이다. 
-
-그중 `print` 함수는 변수의 값을 (`'여기'`)안에 입력하여 출력가능하다. 
-
-- `sep` : 구분자 , 각 출력할 변수 사이에서 구별하는 역할을 함
-- `end` : 마지막에 출력할 문자열
-
 ```py
-for i in range(10):
-    print(i, end='')
+
 ```
 <br>
 
-한줄에 결과 값을 계속 이어어 출력하려면 매개변수 end를 사용해 끝문자를 지정할수 있다. 
 
 <br>
 
 ```py
-# 변수에 든 값이나 연산을 통해 전달된 값을 담아서 print() 출력 
-How = '값'
-print(How) # '값' 이 출력 된다. 
+
 
 ```
 
 <br>
 
-`,` 로 여러 변수를 나열하면 한줄에 출력
+
 
 ```py
 
-fst = 'first'
-snd = 'second'
-trd = 'third'
-
-print(fst,snd,trd) # 기본적으로는 한칸 띄워쓰기 후 출력 
 
 ```
 <br>
-파이썬은 한 문장의 끝(statement)에 아무것도 붙이지 않는다.
+
+
+
 <br>
 
 ```py
-#단, 한줄에 여러 수행문의 넣고 싶다면 구분을 위해 ;을 붙인다
-How = 1;print(How)
+
+
 ```
 <br>
 
