--- a/Python/기본/2.기본_기본요소.md
+++ b/Python/기본/2.기본_기본요소.md
@@ -13,6 +13,10 @@
 파이썬은 모든것이 객체이다. 
 10은 수치값이 아닌 객체이다 => 주소값이 변수에 세팅된거라서 
 
+- 정수(...,-1,0,1,...) 
+- 실수
+- 십진수(`10`, `11`), 이진수(`0` or `1`), 8진수, 16진수(`0xFF`)
+- 부동소수(`-3.14`,0,0,1,2..)
 
 ```py
 
@@ -23,8 +27,6 @@ print( a )
 # 소수 
 a = 1.1
 print( a )
-
-
 
 
 # 일반적인 연산자는 대동소이하다.
