Just do it_2020.07.23

--- a/코드정리/1.기초_Crawling.md
+++ b/코드정리/1.기초_Crawling.md
@@ -10,9 +10,22 @@
 
 ## 1.
 
+텍스트에 포함되어 있는 특수 문자 제거
+
 <br>
 
 ```py
+
+import re
+
+def cleanText(data):
+    """
+    텍스트에 포함되어 있는 특수 문자 제거
+    # import re
+    """
+    txt = re.sub('[-=+,#/\?:^$.@*\"※~&%ㆍ!』\\‘|\(\)\[\]\<\>`\'…》]', '', data)
+    # txt = re.sub('[-=+,#/\?:^$.@*\"※~&%ㆍ!』\\‘|\(\)\[\]\<\>`\'…》]', '', raw)
+    return txt
 
 ```
 
