Just do it_딕트정렬

--- a/코드정리/1.기초_Pandas.md
+++ b/코드정리/1.기초_Pandas.md
@@ -12,7 +12,7 @@
 
 <br>
 
-원하는 위치의 컬럼과 인덱스 길이를 확인 
+원하는 위치의 컬럼과 인덱스 길이를 확인한다. 
 
 ```py 
 idxNum = 10        # 인덱스 길이
@@ -27,15 +27,47 @@ df.head().iloc[:idxNum, colsLen]
 <br>
 
  
-## 2. 
+## 2. `dict()` 정렬(딕트정렬)
 
+<br>
+
+`list()` 안의 중복값의 개수를 확인하고 중복수에 따라 순위를 확인하자 한다. 
+
+그래서 `dict()`를 이용하여 작업을 진행 
+- 리스트안의 중복된 값의 개수
 
 <br>
 
 ```py
-
-
+data = dict()
+for cnt in allData:
+    try: data[cnt] += 1
+    except: data[cnt]=1
 ```
+
+<br>
+
+data는 중복값과 그 중복값의 개수를 보여준다.     
+
+이렇게 만들어진 data를 `sorted(data)` 이용해 정렬한다.      
+
+확인해 보니 defult값 오름차순이며 keys 기준이라 옵션을 이용해 vaules 기준으로 그리고 내림차순으로 변경한다.      
+
+여기서 오름차순을 내림차순으로 변경하는것은 
+`sorted(data,reverse=True)` 를 이용하면 되지만 
+
+keys 기준을 vaules 기준으로 바꾸는것 같이 특정 기준을 변경하는것은 따로 패키지를 이용하여 진행해야한다. 다행히도 번거롭게 설치 할 필요는 없다.
+
+`import operator` 를 이용하여 진행하면 된다. operator의 자세한 내용은 [참고](https://docs.python.org/ko/3.7/library/operator.html) 확인해보면된다.   
+
+여기서 `itemgetter()` 안에 들어가는 수는 `0` 은 키 기준 , `1` 값 기준이다. 
+
+임포트를 한 후 이렇게 함수 내부에 파라미터 값을 `key=operator.itemgetter(1)` 으로 지정하면 vaules 기준으로 내림차순의 데이터를 확인 가능하다.         
+
+```py
+sorted(data.items(),reverse=True, key=operator.itemgetter(1))
+``` 
+타이을 확인해보면 `list`로 형식으로 담기게 되는데 인덱싱을 이용하여 원하는 형태로 추출이 가능하다.      
 
 <br>
 
@@ -43,13 +75,13 @@ df.head().iloc[:idxNum, colsLen]
 
 
 ## 3.  데이터 프레임 생성 
+
 <br>
 
 
 ### 1 ) 보유 데이터 기반으로 데이터 프레임 생성 
 
 `list`, `dict` 에 담긴 데이터를 기반으로 데이터 프레임 생성 
-
 
 ```py
 data = dict() or list()
