--- a/주로사용하는코드/1.기초_Pandas.md
+++ b/주로사용하는코드/1.기초_Pandas.md
@@ -51,14 +51,16 @@ data는 중복값과 그 중복값의 개수를 보여준다.
 
 이렇게 만들어진 data를 `sorted(data)` 이용해 정렬한다.      
 
-확인해 보니 defult값 오름차순이며 keys 기준이라 옵션을 이용해 vaules 기준으로 그리고 내림차순으로 변경한다.      
+확인해 보니 defult 값 오름차순이며 keys 기준이라 옵션을 이용해 vaules 기준으로 그리고 내림차순으로 변경한다.      
 
 여기서 오름차순을 내림차순으로 변경하는것은 
 `sorted(data,reverse=True)` 를 이용하면 되지만 
 
 keys 기준을 vaules 기준으로 바꾸는것 같이 특정 기준을 변경하는것은 따로 패키지를 이용하여 진행해야한다. 다행히도 번거롭게 설치 할 필요는 없다.
 
-`import operator` 를 이용하여 진행하면 된다. operator의 자세한 내용은 [참고](https://docs.python.org/ko/3.7/library/operator.html) 확인해보면된다.   
+`import operator` 를 이용하여 진행하면 된다.
+
+ operator의 자세한 내용은 [참고](https://docs.python.org/ko/3.7/library/operator.html) 확인해보면된다.   
 
 여기서 `itemgetter()` 안에 들어가는 수는 `0` 은 키 기준 , `1` 값 기준이다. 
 
